--- a/data/cards/19271881.yaml
+++ b/data/cards/19271881.yaml
@@ -12,7 +12,7 @@ name:
   ko: 빛나는 왕의 낙인
   ko_rr: Binna-neun Wang-ui Nak-in
   zh-TW:
-  zh-CN:
+  zh-CN: 赫耀的王之烙印
 text:
   en: |-
     Choose 1 Fusion Monster you control that mentions "Fallen of Albaz" as material, and negate the effects of all other face-up cards currently on the field until the end of this turn. During the End Phase, if a Fusion Monster(s) was sent to your GY this turn: You can add this card from the GY to your hand. You can only use 1 "Brightest, Blazing, Branded King" effect per turn, and only once that turn.
@@ -31,7 +31,8 @@ text:
   ko: |-
     이 카드명의 ①②의 효과는 1턴에 1번, 어느 쪽이든 1개밖에 사용할 수 없다. ①: "알버스의 낙윤"을 융합 소재로 하는 자신 필드의 융합 몬스터 1장을 고르고, 그 몬스터 이외의 필드의 모든 앞면 표시의 카드 효과를 턴 종료시까지 무효로 한다. ②: 이 턴에 융합 몬스터가 자신 묘지로 보내지고 있을 경우, 엔드 페이즈에 발동할 수 있다. 묘지의 이 카드를 패에 넣는다.
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    这个卡名的①②效果1回合只能有1次使用其中任意1个。①：选需要以「アルバスの落胤／阿尔巴斯之落胤」作为融合素材的自己场上的1只融合怪兽，那只怪兽以外的场上的全部表侧表示的卡的效果直到回合结束时无效。②：这个回合有融合怪兽被送入自己的墓地的场合，结束阶段可以发动。将墓地的这张卡加入手牌。
 card_type: Trap
 property: Normal
 series:
