--- a/data/cards/22850702.yaml
+++ b/data/cards/22850702.yaml
@@ -12,7 +12,7 @@ name:
   ko: 카오스 앙헬－혼돈의 쌍익－
   ko_rr: Kaoseu Anghel - Hondon-ui Ssang-ik
   zh-TW:
-  zh-CN:
+  zh-CN: 混沌之双翼
 text:
   en: |-
     1 Tuner + 1+ non-Tuner LIGHT or DARK monsters
@@ -51,7 +51,9 @@ text:
     튜너 ＋ 튜너 이외의 빛 / 어둠 속성 몬스터 1장 이상
     이 카드를 싱크로 소환할 경우, 자신 필드의 빛 / 어둠 속성 몬스터 1장을 튜너로서 취급할 수 있다. ①: 이 카드가 특수 소환에 성공했을 경우, 필드의 카드 1장을 대상으로 하고 발동할 수 있다. 그 카드를 제외한다. ②: 이 카드는, 이 카드의 싱크로 소재로 한 몬스터의 원래의 속성에 따라 이하의 효과를 얻는다. ●빛: 자신 필드의 싱크로 몬스터는 상대가 발동한 몬스터의 효과를 받지 않는다. ●어둠: 자신 몬스터는 전투로는 파괴되지 않는다.
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    调整+1只以上调整以外的光或暗属性怪兽
+    要同调召唤这张卡的场合，可以将自己场上的1只光或暗属性怪兽当作调整使用。①：这张卡特殊召唤成功的场合，可以以场上的1张卡为对象发动。将那张卡除外。②：这张卡根据作为这张卡的同调素材的怪兽的原属性得到以下的效果。●光：自己场上的同调怪兽不受对手发动的怪兽的效果影响。●暗：自己的怪兽不会被战斗破坏。
 card_type: Monster
 monster_type_line: Fiend / Synchro / Effect
 attribute: DARK
