--- a/data/cards/23512906.yaml
+++ b/data/cards/23512906.yaml
@@ -12,7 +12,7 @@ name:
   ko:
   ko_rr:
   zh-TW:
-  zh-CN:
+  zh-CN: 黄金荣耀-里昂
 text:
   en: |-
     If your LP are lower than your opponent's: You can Special Summon this card from your hand. If this card is Normal or Special Summoned: You can target 1 non-Warrior "Gold Pride" monster in your GY; Special Summon it in Defense Position, also you cannot Special Summon monsters from the Extra Deck for the rest of this turn, except "Gold Pride" monsters. During your opponent's Main Phase, you can (Quick Effect): Immediately after this effect resolves, Synchro Summon 1 Synchro Monster, using only "Gold Pride" monsters you control. You can only use each effect of "Gold Pride - Leon" once per turn.
@@ -29,7 +29,8 @@ text:
   ja:
   ko:
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    这个卡名的①②③效果1回合各能使用1次。①：自己的LP比对手少的场合可以发动。将这张卡从手牌特殊召唤。②：这张卡召唤或特殊召唤成功的场合，可以以自己墓地的战士族以外的1只「Gold Pride／黄金荣耀」怪兽为对象发动。将那只怪兽以守备表示特殊召唤。这个效果发动后，直到回合结束时自己从额外卡组特殊召唤的只能是「Gold Pride／黄金荣耀」怪兽。③：对手的主要阶段可以发动。只用自己场上的「Gold Pride／黄金荣耀」怪兽作为同调素材来同调召唤。
 card_type: Monster
 monster_type_line: Warrior / Tuner / Effect
 attribute: WIND
