--- a/data/cards/33055499.yaml
+++ b/data/cards/33055499.yaml
@@ -12,7 +12,7 @@ name:
   ko:
   ko_rr:
   zh-TW:
-  zh-CN:
+  zh-CN: 地雷蜘蛛的猎物
 text:
   en: |-
     Special Summon this card as a Normal Monster (Insect/EARTH/Level 5/ATK 2100/DEF 100) to your Main Monster Zone in its same column (this card is also still a Trap), then you can destroy 1 monster your opponent controls in this card's column. You can banish this card from your GY; add 1 of your "Sanga of the Thunder", "Kazejin", or "Suijin" that is banished or in your Deck to your hand. You can only use each effect of "Prey of the Jirai Gumo" once per turn.
@@ -29,7 +29,8 @@ text:
   ja:
   ko:
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    这个卡名的①②效果1回合各能使用1次。①：这张卡发动后变为通常怪兽（昆虫族·地·5星·攻2100/守100)，特殊召唤到这张卡的正对面的自己的主要怪兽区。这张卡也当作陷阱卡使用。那之后，可以选与这张卡相同纵列的对手场上的1只怪兽破坏。②：可以将墓地的这张卡除外发动。从自己的卡组以及除外中的自己的卡之中，选「雷魔神－サンガ／雷魔神-桑迦」、「風魔神－ヒューガ／风魔神-修迦」、「水魔神－スーガ／水魔神-斯迦」之中的任意1只加入手牌。
 card_type: Trap
 property: Continuous
 series:
