--- a/data/cards/47961342.yaml
+++ b/data/cards/47961342.yaml
@@ -12,7 +12,7 @@ name:
   ko: 전철지점
   ko_rr: Cheoncheoljijeom
   zh-TW:
-  zh-CN:
+  zh-CN: 转轨地点
 text:
   en: |-
     If your opponent controls 3 or more monsters, choose 1 of them, and make your opponent send either it or all other monsters they control to the GY (their choice).
@@ -30,7 +30,10 @@ text:
     ●고른 몬스터
     ●고른 몬스터 이외의 자신 필드의 모든 몬스터
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    ①：对手场上有3只以上的怪兽存在的场合，选那之中的1只。对手必须将以下的其中任意种送入墓地。
+    ●选的怪兽
+    ●选的怪兽以外的自身场上的全部的怪兽
 card_type: Trap
 property: Normal
 images:
