--- a/data/cards/62411811.yaml
+++ b/data/cards/62411811.yaml
@@ -12,7 +12,7 @@ name:
   ko:
   ko_rr:
   zh-TW:
-  zh-CN:
+  zh-CN: 迷宫的影之食尸鬼
 text:
   en: |-
     You can discard this card; add 1 "Labyrinth Wall" card from your Deck to your hand. At the start of the Damage Step, if your opponent's monster battles, while you control a "Labyrinth Wall" card: You can banish this card from your GY; destroy that opponent's monster. You can only use each effect of "Shadow Ghoul of the Labyrinth" once per turn.
@@ -29,7 +29,8 @@ text:
   ja:
   ko:
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    这个卡名的①②效果1回合各能使用1次。①：可以将这张卡从手牌舍弃发动。从卡组将1张「Labyrinth Wall／迷宫壁」卡加入手牌。②：自己场上有「Labyrinth Wall／迷宫壁」卡存在的场合，对手怪兽进行战斗的伤害步骤开始时可以将墓地的这张卡除外发动。将那只对手的怪兽破坏。
 card_type: Monster
 monster_type_line: Zombie / Effect
 attribute: DARK
