--- a/data/cards/90465153.yaml
+++ b/data/cards/90465153.yaml
@@ -12,7 +12,7 @@ name:
   ko: 마나둠 프라임하트
   ko_rr: Manadum Peuraimhateu
   zh-TW:
-  zh-CN:
+  zh-CN: 意乐都守 普莱姆哈特
 text:
   en: |-
     1+ Tuners + 1 LIGHT monster
@@ -39,7 +39,9 @@ text:
     튜너 1장 이상 ＋ 빛 속성 몬스터 1장
     ①: 이 카드는, 이 카드의 싱크로 소재로 한 튜너의 수까지 1번의 배틀 페이즈 중에 공격할 수 있다. ②: "마나둠" 튜너를 소재로서 싱크로 소환한 이 카드는, 상대 효과의 대상이 되지 않는다. ③: 싱크로 소환한 앞면 표시의 이 카드가 상대에 의해 필드에서 벗어났을 경우에 발동할 수 있다. 자신 묘지의 몬스터 및 제외되어 있는 자신 몬스터 중에서, "비서스＝스타프로스트" 또는 공격력 1500 / 수비력 2100 의 몬스터 1장을 고르고 특수 소환한다.
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    1只以上的调整+1只光属性怪兽
+    ①：这张卡在同1次的战斗阶段里，可以作最多为作为这张卡的同调素材的调整的数量的次数的攻击。②：将「マナドゥム／意乐都」调整作为素材来同调召唤的这张卡不会成为对手的效果的对象。③：同调召唤的表侧表示的这张卡因对手而从场上离开的场合可以发动。从自己的墓地的怪兽以及除外中的自己的怪兽之中，选1只「ヴィサス＝スタフロスト／维萨斯·斯塔弗罗斯特」或者攻击力1500/守备力2100的怪兽特殊召唤。
 card_type: Monster
 monster_type_line: Fairy / Synchro / Effect
 attribute: LIGHT
