--- a/data/cards/91479482.yaml
+++ b/data/cards/91479482.yaml
@@ -12,7 +12,7 @@ name:
   ko:
   ko_rr:
   zh-TW:
-  zh-CN:
+  zh-CN: 红恋之丽杰-布拉达曼特
 text:
   en: |-
     (This card is always treated as an "Infernoble Knight" card.)
@@ -26,7 +26,8 @@ text:
     このカード名はルール上「焔聖騎士」カードとしても扱う。このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードを手札から捨て、自分フィールドの戦士族モンスター１体を対象として発動できる。そのモンスターが装備可能な装備魔法カード１枚をデッキから選び、そのモンスターに装備する。②：装備カードを装備していないこのカードが相手モンスターとの戦闘で破壊され墓地へ送られた時に発動できる。このカードを特殊召喚し、その相手フィールドのモンスターを装備カード扱いとしてこのカードに装備する。
   ko:
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    这个卡名规则上也当作「焔聖騎士／焰圣骑士」卡使用。这个卡名的①②效果1回合各能使用1次。①：可以将这张卡从手牌舍弃，以自己场上的1只战士族怪兽为对象发动。从卡组选1张可以装备那只怪兽的装备魔法卡，装备给那只怪兽。②：没装备有装备卡的这张卡被与对手怪兽所作的战斗破坏并送入墓地时可以发动。将这张卡特殊召唤，将那只对手场上的怪兽当作装备卡使用装备给这张卡。
 card_type: Monster
 monster_type_line: Warrior / Tuner / Effect
 attribute: FIRE
