--- a/data/cards/94130731.yaml
+++ b/data/cards/94130731.yaml
@@ -12,7 +12,7 @@ name:
   ko:
   ko_rr:
   zh-TW:
-  zh-CN:
+  zh-CN: 超越龙 冰川恐龙
 text:
   en: |-
     1 Tuner + 1+ non-Tuner monsters
@@ -27,7 +27,9 @@ text:
     このカード名の③の効果は１ターンに１度しか使用できない。①：このカードは戦闘では破壊されない。②：このカードがモンスターゾーンに存在する限り、墓地から特殊召喚された自分フィールドの恐竜族モンスターは、相手の効果の対象にならず、相手の効果では破壊されない。③：このカードが破壊された場合に発動できる。自分の墓地から通常モンスター１体を選んでデッキに戻す。その後、このカードを特殊召喚できる。
   ko:
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    调整+1只以上调整以外的怪兽
+    这个卡名的③效果1回合只能使用1次。①：这张卡不会被战斗破坏。②：只要这张卡在怪兽区存在，从墓地特殊召唤的自己场上的恐龙族怪兽就不会成为对手的效果的对象且不会被对手的效果破坏。③：这张卡被破坏的场合可以发动。从自己的墓地选1只通常怪兽返回卡组。那之后，可以将这张卡特殊召唤。
 card_type: Monster
 monster_type_line: Dinosaur / Synchro / Effect
 attribute: WATER
