--- a/data/cards/97417863.yaml
+++ b/data/cards/97417863.yaml
@@ -12,7 +12,7 @@ name:
   ko: <ruby>D<rt>디</rt></ruby><ruby>D<rt>디</rt></ruby><ruby>D<rt>디</rt></ruby><ruby>D<rt>디</rt></ruby> 초차원통황 제로 패러독스
   ko_rr: DiDiDiDi Chochawontonghwang Jero Paereodokseu
   zh-TW:
-  zh-CN:
+  zh-CN: DDDD超次元统皇 零之帕拉多克斯
 text:
   en: |-
     Cannot be Normal Summoned/Set. Must be Special Summoned by its own effect. When you Pendulum Summon a monster(s), while the total Pendulum Scales in your Pendulum Zones are higher than the total Levels of the Pendulum Summoned monsters: You can Special Summon this card from your hand, and if you do, destroy as many other cards on the field as possible, then you can place this card in your Pendulum Zone. Once per turn, if another face-up "D/D/D" monster(s) you control leaves the field by Spell Card or effect: This card's ATK becomes 6000.
@@ -26,7 +26,8 @@ text:
   ko: |-
     이 카드는 통상 소환할 수 없으며, 이 카드 효과로만 특수 소환할 수 있다. ①: 자신이 몬스터를 펜듈럼 소환했을 때, 자신의 펜듈럼 존의 펜듈럼 스케일의 합계가 펜듈럼 소환한 몬스터 레벨의 합계를 넘고 있으면 발동할 수 있다. 이 카드를 패에서 특수 소환하고, 필드의 다른 카드를 전부 파괴한다. 그 후, 이 카드를 자신의 펜듈럼 존에 놓을 수 있다. ②: 1턴에 1번, 자신 필드의 다른 앞면 표시의 "DDD(디디디)" 몬스터가 마법 카드의 효과로 필드에서 벗어났을 경우에 발동한다. 이 카드의 공격력은 6000 이 된다.
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    这张卡不能通常召唤，只有用这张卡的效果才能特殊召唤。①：自己灵摆召唤怪兽时，若自己的灵摆区的灵摆刻度的合计超过灵摆召唤的怪兽的等级的合计则可以发动。将这张卡从手牌特殊召唤，将场上的其他的卡全部破坏。那之后，可以将这张卡放置到自己的灵摆区。②：1回合1次，自己场上的其他的表侧表示的「DDD」怪兽因魔法卡的效果从场上离开的场合必定发动。这张卡的攻击力变为6000。
 card_type: Monster
 monster_type_line: Fiend / Pendulum / Effect
 attribute: DARK
@@ -47,7 +48,8 @@ pendulum_effect:
   ko: |-
     이 카드명의 펜듈럼 효과는 1턴에 1번밖에 사용할 수 없다. ①: 상대의 펜듈럼 존의 카드 1장을 대상으로 하고 발동할 수 있다. 이 카드를 특수 소환하고, 대상의 카드를 자신의 펜듈럼 존에 놓는다. 이 효과로 놓은 카드는 다음 턴의 엔드 페이즈에 파괴된다.
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    这个卡名的灵摆效果1回合只能使用1次。①：可以以对手的灵摆区的1张卡为对象发动。将这张卡特殊召唤，将对象卡放置到自己的灵摆区。用这个效果放置的卡在下个回合的结束阶段破坏。
 series:
 - D/D
 - D/D/D
