--- a/data/cards/07336745.yaml
+++ b/data/cards/07336745.yaml
@@ -12,7 +12,7 @@ name:
   ko: 다이놀피어 인택트
   ko_rr: Dainolpi-eo Intaekteu
   zh-TW:
-  zh-CN:
+  zh-CN: 强啡肽恐龙无损
 text:
   en: |-
     When a monster effect is activated, while you control a "Dinomorphia" card: Pay half your LP; negate the activation, and if you do, destroy that monster, also whenever you take battle damage this turn, the damage taken becomes half your LP at that time. During damage calculation, while your LP are 2000 or less, if you would take battle damage: You can banish this card from your GY; you take no battle damage from that battle. You can only activate 1 "Dinomorphia Intact" per turn.
@@ -31,7 +31,8 @@ text:
   ko: |-
     이 카드명의 카드는 1턴에 1장밖에 발동할 수 없다. ①: 자신 필드에 "다이놀피어" 카드가 존재하고, 몬스터의 효과가 발동했을 때, LP를 절반 지불하고 발동할 수 있다. 그 발동을 무효로 하고 파괴한다. 이 턴에, 자신이 받는 전투 데미지는 그 때의 자신 LP의 절반의 수치가 된다. ②: 자신의 LP가 2000 이하이고, 자신이 전투 데미지를 받는 데미지 계산시에, 묘지의 이 카드를 제외하여 발동할 수 있다. 그 전투로 발생하는 자신에게로의 전투 데미지를 0 으로 한다.
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    这个卡名的卡1回合只能发动1张。①：自己场上有「ダイノルフィア／强啡肽恐龙」卡存在，怪兽的效果发动时，可以支付一半LP发动。使其发动无效并破坏。这个回合，自己受到的战斗伤害变为那个时候自己的LP的一半数值。②：自己的LP为2000以下，自己要受到战斗伤害的伤害计算时，可以将墓地的这张卡除外发动。那次战斗发生的对自己的战斗伤害变为0。
 card_type: Trap
 property: Counter
 series:
