--- a/data/cards/17550376.yaml
+++ b/data/cards/17550376.yaml
@@ -12,7 +12,7 @@ name:
   ko: 네무렐리아의 꿈지기－오레이에
   ko_rr: Nemurellia-ui Ttumjigi - Orei-e
   zh-TW:
-  zh-CN:
+  zh-CN: 涅姆蕾莉娅的守梦者-大枕头
 text:
   en: |-
     If you have a face-up Pendulum Monster in your Extra Deck, you can Special Summon this card (from your hand). You can only Special Summon "Nemleria Dream Defender - Oreiller" once per turn this way. If you have "Dreaming Nemleria" face-up in your Extra Deck (Quick Effect): You can banish 1 face-down card from your Extra Deck, face-down; this card gains 500 ATK for each monster your opponent currently controls, until the end of this turn. You can only use this effect of "Nemleria Dream Defender - Oreiller" once per turn.
@@ -31,7 +31,8 @@ text:
   ko: |-
     이 카드명의, ①의 방법에 의한 특수 소환은 1턴에 1번밖에 할 수 없으며, ②의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 자신의 엑스트라 덱에 앞면 표시 펜듈럼 몬스터가 존재할 경우, 이 카드는 패에서 특수 소환할 수 있다. ②: 자신의 엑스트라 덱에 앞면 표시의 "꿈꾸는 네무렐리아"가 존재할 경우, 엑스트라 덱에서 뒷면 표시의 카드 1장을 뒷면 표시로 제외하고 발동할 수 있다. 이 카드의 공격력은 턴 종료시까지, 상대 필드의 몬스터의 수 × 500 올린다. 이 효과는 상대 턴에도 발동할 수 있다.
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    这个卡名的以①的方法所作的特殊召唤1回合只能1次，②效果1回合只能使用1次。①：自己的额外卡组有表侧表示的灵摆怪兽存在的场合，这张卡可以从手牌特殊召唤。②：自己的额外卡组有表侧表示的「夢見るネムレリア／入梦的涅姆蕾莉娅」存在的场合，可以从额外卡组将1张里侧表示的卡以里侧表示除外发动。这张卡的攻击力直到回合结束时上升对手场上的怪兽的数量×500。这个效果在对手的回合也能发动。
 card_type: Monster
 monster_type_line: Beast / Effect
 attribute: LIGHT
