--- a/data/cards/27572350.yaml
+++ b/data/cards/27572350.yaml
@@ -12,7 +12,7 @@ name:
   ko: 비스테드 디스 파테르
   ko_rr: Biseutedeu Diseu Patereu
   zh-TW:
-  zh-CN:
+  zh-CN: 深渊之兽 神兽狄斯·帕特尔
 text:
   en: |-
     1 Tuner + 1+ non-Tuner Dragon monsters
@@ -39,7 +39,9 @@ text:
     튜너 ＋ 튜너 이외의 드래곤족 몬스터 1장 이상
     이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 제외되어 있는 자신 또는 상대의 빛 / 어둠 속성 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 자신 필드에 특수 소환한다. ②: 상대가 몬스터의 효과를 발동했을 때, 제외되어 있는 자신 또는 상대의 카드 1장을 대상으로 하고 발동할 수 있다. 그 카드를 주인의 덱으로 되돌린다. 추가로, 대상의 카드의 주인이 자신일 경우, 그 몬스터를 파괴한다. 상대일 경우, 그 발동한 효과를 무효로 한다.
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    调整+1只以上调整以外的龙族怪兽
+    这个卡名的①②效果1回合只能使用1次。①：可以以除外中的自己或者对手的1只光或暗属性怪兽为对象发动。将那只怪兽特殊召唤到自己的场上。②：对手发动怪兽的效果时，可以以除外中的自己或者对手的1张卡为对象发动。使那张卡返回持有者的卡组。并且，对象卡的持有者是自己的场合，将那只怪兽破坏。是对手的场合，使其发动的效果无效。
 card_type: Monster
 monster_type_line: Dragon / Synchro / Effect
 attribute: DARK
