--- a/data/cards/29302858.yaml
+++ b/data/cards/29302858.yaml
@@ -12,7 +12,7 @@ name:
   ko:
   ko_rr:
   zh-TW:
-  zh-CN:
+  zh-CN: 征服之魂 螺禅
 text:
   en: |-
     If this card is Normal or Special Summoned: You can add 1 non-Warrior "Vanquish Soul" monster from your Deck to your hand. (Quick Effect): You can reveal 1 monster in your hand of each of the following Attributes, then activate the appropriate effect;
@@ -28,7 +28,8 @@ text:
     このカード名の①②の効果は、それぞれ１ターンに１度しか使用できず、同一チェーン上では発動できない。①：このカードが召喚・特殊召喚に成功した場合に発動できる。デッキから戦士族以外の「ＶＳ」モンスター１体を手札に加える。②：自分・相手ターンに、以下から１つ選択し、その属性の手札のモンスターを１体ずつ相手に見せて発動できる。●炎：このターン、このカードは効果では破壊されない。●炎・闇：このカードと同じ縦列の他のモンスターを全て破壊する。
   ko:
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    这个卡名的①②效果，1回合各能使用1次且同一连锁上不能发动。①：这张卡召唤或特殊召唤成功的场合可以发动。从卡组将1只战士族以外的「VS／征服之魂」怪兽加入手牌。②：自己或对手的回合，可以从以下选择1个，向对手展示那些属性的手牌的怪兽各1只发动。●炎：这个回合，这张卡不会被效果破坏。●炎·暗：将与这张卡相同纵列的其他的怪兽全部破坏。
 card_type: Monster
 monster_type_line: Warrior / Effect
 attribute: FIRE
