--- a/data/cards/53754104.yaml
+++ b/data/cards/53754104.yaml
@@ -12,7 +12,7 @@ name:
   ko: 가드 맨티스
   ko_rr: Gadeu Maentiseu
   zh-TW:
-  zh-CN:
+  zh-CN: 防御螳螂
 text:
   en: |-
     You can pay 1000 LP; Special Summon this card from your hand in Defense Position, but while it is face-up in the Monster Zone, you cannot Special Summon monsters, except Insect monsters. During your opponent's turn (Quick Effect): You can target 1 Insect monster you control; change its battle position. You can only use each effect of "Guard Mantis" once per turn.
@@ -26,7 +26,8 @@ text:
   ko: |-
     이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 1000 LP를 지불하고 발동할 수 있다. 이 카드를 패에서 수비 표시로 특수 소환한다. 이 효과로 특수 소환한 이 카드가 몬스터 존에 앞면 표시로 존재하는 한, 자신은 곤충족 몬스터밖에 특수 소환할 수 없다. ②: 상대 턴에, 자신 필드의 곤충족 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터의 표시 형식을 변경한다.
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    这个卡名的①②效果1回合只能使用1次。①：可以支付1000LP发动。将这张卡从手牌以守备表示特殊召唤。只要用这个效果特殊召唤的这张卡在怪兽区以表侧表示存在，自己特殊召唤的就只能是昆虫族怪兽。②：对手的回合，可以以自己场上的1只表侧表示怪兽为对象发动。变更那只怪兽的表示形式。
 card_type: Monster
 monster_type_line: Insect / Effect
 attribute: WIND
