--- a/data/cards/60023855.yaml
+++ b/data/cards/60023855.yaml
@@ -12,7 +12,7 @@ name:
   ko: 베이비 스파이더
   ko_rr: Beibi Seupaideo
   zh-TW:
-  zh-CN:
+  zh-CN: 宝贝蜘蛛
 text:
   en: |-
     You can Tribute 1 DARK monster; increase the Levels of all "Baby Spiders" you currently control by the Level of that Tributed monster. You can pay half your LP, banish this card from your GY, and detach 1 material from your DARK Xyz Monster, then target 1 DARK monster in your GY; Special Summon it. You can only use each effect of "Baby Spider" once per turn.
@@ -26,7 +26,8 @@ text:
   ko: |-
     이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 자신 필드의 어둠 속성 몬스터 1장을 릴리스하고 발동할 수 있다. 자신 필드의 모든 "베이비 스파이더"의 레벨은, 이 효과를 발동하기 위해 릴리스한 몬스터의 레벨만큼만 올라간다. ②: LP를 절반 지불하여, 묘지의 이 카드를 제외하고, 자신 필드의 어둠 속성 엑시즈 몬스터의 엑시즈 소재를 1개 제거하여, 자신 묘지의 어둠 속성 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 특수 소환한다.
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    这个卡名的①②效果1回合各能使用1次。①：可以将自己场上的1只暗属性怪兽解放发动。自己场上的「ベビー・スパイダー／宝贝蜘蛛」的等级上升为了发动这个效果而解放的怪兽的等级数值。②：可以支付一半LP，将墓地的这张卡除外，将自己场上的1只暗属性多维怪兽的多维素材取除，以自己墓地的1只暗属性怪兽为对象发动。将那只怪兽特殊召唤。
 card_type: Monster
 monster_type_line: Insect / Effect
 attribute: DARK
