--- a/data/cards/61322713.yaml
+++ b/data/cards/61322713.yaml
@@ -12,7 +12,7 @@ name:
   ko: 그림자의 빛
   ko_rr: Geurimja-ui Bit
   zh-TW:
-  zh-CN:
+  zh-CN: 阴之光
 text:
   en: |-
     Target 1 DARK monster you control; Special Summon 1 LIGHT monster from your Deck or Extra Deck with the same original Type and Level. You can banish this card from your GY; during your Main Phase this turn, you can Normal Summon 1 LIGHT or DARK monster in addition to your Normal Summon/Set. (You can only gain this effect once per turn.) You can only use each effect of "Shadow's Light" once per turn. You cannot conduct your Battle Phase the turn you activate either of this card's effects.
@@ -26,7 +26,8 @@ text:
   ko: |-
     이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없으며, 이 효과를 발동하는 턴에, 자신은 배틀 페이즈를 실행할 수 없다. ①: 자신 필드의 어둠 속성 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터와 원래의 종족 / 레벨이 같아지는 빛 속성 몬스터 1장을 덱 / 엑스트라 덱에서 특수 소환한다. ②: 묘지의 이 카드를 제외하고 발동할 수 있다. 이 턴에 자신은 통상 소환 외에도 1번만, 자신 메인 페이즈에 빛 / 어둠 속성 몬스터 1장을 일반 소환할 수 있다.
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    这个卡名的①②效果1回合各能使用1次，这些效果发动的回合，自己不能进行战斗阶段。①：可以以自己场上的1只暗属性怪兽为对象发动。从卡组或额外卡组特殊召唤1只与那只怪兽原本的种族·等级相同的光属性。②：可以将墓地的这张卡除外发动。这个回合自己在通常召唤外可以追加仅1次，在自己的主要阶段召唤1只光或暗属性怪兽。
 card_type: Spell
 property: Normal
 images:
