--- a/data/cards/70825459.yaml
+++ b/data/cards/70825459.yaml
@@ -12,7 +12,7 @@ name:
   ko: 트랩트랙
   ko_rr: Teuraepteuraek
   zh-TW:
-  zh-CN:
+  zh-CN: 陷阱小径
 text:
   en: |-
     Target 1 monster you control; destroy it, and if you do, Set 1 Normal Trap directly from your Deck, except "Trap Tracks". It can be activated this turn. You can only activate 1 Trap Card for the rest of this turn after this card resolves. You can only activate 1 "Trap Tracks" per turn.
@@ -31,7 +31,8 @@ text:
   ko: |-
     이 카드명의 카드는 1턴에 1장밖에 발동할 수 없다. ①: 자신 필드의 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 파괴하고, 덱에서 "트랩트랙" 이외의 일반 함정 카드 1장을 골라 자신 필드에 세트한다. 이 효과로 세트한 카드는 세트한 턴에도 발동할 수 있다. 이 카드의 발동 후, 턴 종료시까지 자신은 함정 카드를 1장밖에 발동할 수 없다.
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    这个卡名的卡1回合只能发动1张。①：可以以自己场上的1只怪兽为对象发动。将那只怪兽破坏，从卡组选1张「トラップトラック／陷阱小径」以外的通常陷阱卡盖放到自己的场上。用这个效果盖放的卡在盖放的回合也能发动。这张卡发动后，直到回合结束时自己只能发动1张陷阱卡。
 card_type: Trap
 property: Normal
 images:
