--- a/data/cards/83308376.yaml
+++ b/data/cards/83308376.yaml
@@ -12,7 +12,7 @@ name:
   ko: 혁성의 상검
   ko_rr: Hyeokseong-ui Sanggeom
   zh-TW:
-  zh-CN:
+  zh-CN: 赫圣之相剑
 text:
   en: |-
     If you control a Synchro Monster: Target 1 card on the field or in either GY; banish it. If your opponent controls a Ritual, Fusion, Synchro, Xyz, or Link Monster: You can banish 1 Synchro Monster from your GY; add this card from the GY to your hand. You can only use each effect of "Swordsoul Punishment" once per turn.
@@ -31,7 +31,8 @@ text:
   ko: |-
     이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 자신 필드에 싱크로 몬스터가 존재할 경우, 자신 또는 상대의, 필드 / 묘지의 카드 1장을 대상으로 하고 발동할 수 있다. 그 카드를 제외한다. ②: 상대 필드에 의식 / 융합 / 싱크로 / 엑시즈 / 링크 몬스터 중 어느 것이 존재할 경우, 자신 묘지에서 싱크로 몬스터 1장을 제외하고 발동할 수 있다. 묘지의 이 카드를 패에 넣는다.
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    这个卡名的①②效果1回合各能使用1次。①：自己场上有同调怪兽存在的场合，可以以自己或者对手的场上或墓地的1张卡为对象发动。将那张卡除外。②：对手场上有仪式·融合·同调·多维·链接怪兽的任意1种存在的场合，可以从自己的墓地将1只同调怪兽除外发动。将墓地的这张卡加入手牌。
 card_type: Spell
 property: Normal
 series:
