--- a/data/cards/83334932.yaml
+++ b/data/cards/83334932.yaml
@@ -12,7 +12,7 @@ name:
   ko: 초중무사 바이－<ruby>Q<rt>큐</rt></ruby>
   ko_rr: Chojungmusa Bai-Kyu
   zh-TW:
-  zh-CN:
+  zh-CN: 超重武者 摩托-Q
 text:
   en: |-
     If you have no Spells/Traps in your GY: You can discard this card; add 1 "Superheavy Samurai" monster from your Deck to your hand, except "Superheavy Samurai Motorbike". You can only use this effect of "Superheavy Samurai Motorbike" once per turn. Once per turn: You can target 1 Machine monster you control; increase its Level by 2.
@@ -31,7 +31,8 @@ text:
   ko: |-
     이 카드명의 ①의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 자신 묘지에 마법 / 함정 카드가 존재하지 않을 경우, 이 카드를 패에서 버리고 발동할 수 있다. 덱에서 "초중무사 바이－Q(큐)" 이외의 "초중무사" 몬스터 1장을 패에 넣는다. ②: 1턴에 1번, 자신 필드의 기계족 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터의 레벨을 2개 올린다.
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    这个卡名的①效果1回合只能使用1次。①：自己的墓地没有魔法陷阱卡存在的场合，可以将这张卡从手牌舍弃发动。从卡组将1只「超重武者バイ－Q／超重武者 摩托-Q」以外的1只「超重武者」怪兽加入手牌。②：1回合1次，可以以自己场上的1只机械族怪兽为对象发动。那只怪兽的等级上升2。
 card_type: Monster
 monster_type_line: Machine / Tuner / Effect
 attribute: EARTH
