--- a/data/cards/91073013.yaml
+++ b/data/cards/91073013.yaml
@@ -12,7 +12,7 @@ name:
   ko:
   ko_rr:
   zh-TW:
-  zh-CN:
+  zh-CN: 征服之魂 龙帝伐利乌斯
 text:
   en: |-
     During the Main Phase (Quick Effect): You can target 1 non-Dragon "Vanquish Soul" monster you control; return it to the hand, and if you do, Special Summon this card from your hand. (Quick Effect): You can reveal 1 monster in your hand of each of the following Attributes, then activate the appropriate effect;
@@ -28,7 +28,8 @@ text:
     このカード名の①②の効果は、それぞれ１ターンに１度しか使用できず、同一チェーン上では発動できない。①：自分・相手のメインフェイズに、ドラゴン族以外の自分フィールドの「ＶＳ」モンスター１体を対象として発動できる。そのモンスターを手札に戻し、このカードを手札から特殊召喚する。②：自分・相手ターンに、以下から１つ選択し、その属性の手札のモンスターを１体ずつ相手に見せて発動できる。●地：このターン、表側表示のこのカードは相手が発動した効果を受けない。●地・炎・闇：フィールドの他のカード１枚を選んで破壊する。
   ko:
   zh-TW:
-  zh-CN:
+  zh-CN: |-
+    这个卡名的①②效果，1回合各能使用1次且同一连锁上不能发动。①：自己或对手的主要阶段，可以以龙族以外的自己场上的1只「VS／征服之魂」怪兽为对象发动。使那只怪兽返回手牌，将这张卡从手牌特殊召唤。②：自己或对手的回合，可以从以下选择1个，向对手展示那些属性的手牌的怪兽各1只发动。●地：这个回合，表侧表示的这张卡不受对手发动的效果影响。●地·炎：选场上的1张其他的卡破坏。
 card_type: Monster
 monster_type_line: Dragon / Effect
 attribute: EARTH
