--- a/rush.yaml
+++ b/rush.yaml
@@ -100141,7 +100141,7 @@ name:
   it:
   pt:
   ja: ハーピィ・レジーナ
-  ja_romaji:
+  ja_romaji: Hāpyi Rejīna
   ko:
   ko_rr:
   zh-TW:
@@ -100188,3 +100188,325 @@ sets:
     rarities:
     - Normal Parallel Rare
 yugipedia_page_id: 936314
+---
+konami_id:
+name:
+  en: Harpie Carla
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ハーピィ・カーラ
+  ja_romaji: Hāpyi Kāra
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    None
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Set 1 "Harpie's Full Dress" from your Graveyard in your Spell & Trap Zone.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Winged Beast / Effect
+attribute: WIND
+level: 2
+atk: 500
+def: 500
+series:
+- Harpie
+images:
+- index: 1
+  image: HarpieCarla-RDTB01-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/TB01-JP009
+    set_name: 'Triple Build Pack: Godbreath Wing'
+    rarities:
+    - Normal Parallel Rare
+yugipedia_page_id: 936315
+---
+konami_id:
+name:
+  en: Harpie's Full Dress
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ハーピィズフルドレス
+  ja_romaji: Hāpyizu Furudoresu
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Equip this card to 1 face-up "Harpie Lady" or "Harpie Ladies" on your field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    The equipped monster gains 800 ATK and 400 DEF. Also, if you have 1 or 3 face-up monsters on your field, the equipped monster inflicts piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference), if it attacks a Defense Position monster.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Spell
+property: Equip
+series:
+- Harpie
+images:
+- index: 1
+  image: HarpiesFullDress-RDTB01-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/TB01-JP012
+    set_name: 'Triple Build Pack: Godbreath Wing'
+    rarities:
+    - Normal Parallel Rare
+yugipedia_page_id: 936317
+---
+konami_id:
+name:
+  en: Harpie Ladies
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ハーピィ<ruby>三姉妹<rt>レディース</rt></ruby>
+  ja_romaji: Hāpyi Redīsu
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+summoning_condition:
+  en: |-
+    You can Maximum Summon this card together with "Harpie Ladies [L]" and "Harpie Ladies [R]".
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Shuffle 2 WIND Attribute Winged Beast Type monsters from your Graveyard into the Deck.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    1 face-up monster on your field gains 500 ATK until the end of this turn. Then, if this card is in Maximum Mode, inflict 500 damage to your opponent.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Winged Beast / Maximum / Effect
+attribute: WIND
+level: 5
+atk: 2100
+def: 0
+series:
+- Harpie
+maximum_atk: 3400
+images:
+- index: 1
+  image: HarpieLadies-RDTB01-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/TB01-JP002
+    set_name: 'Triple Build Pack: Godbreath Wing'
+    rarities:
+    - Over Rush Rare
+yugipedia_page_id: 936321
+---
+konami_id:
+name:
+  en: Harpie Ladies [L]
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ハーピィ<ruby>三姉妹<rt>レディース</rt></ruby>［<ruby>Ｌ<rt>エル</rt></ruby>］
+  ja_romaji: Hāpyi Redīsu [Eru]
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+summoning_condition:
+  en: |-
+    This card's name becomes "Harpie Ladies" while in the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    None
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect_types:
+- Continuous
+effect:
+  en: |-
+    This card's name becomes "Harpie Ladies" and it cannot be destroyed by your opponent's Trap Card effects. Also, if this card is in Maximum Mode, increase its Level by 5.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Winged Beast / Maximum / Effect
+attribute: WIND
+level: 5
+atk: 2100
+def: 0
+series:
+- Harpie
+images:
+- index: 1
+  image: HarpieLadiesL-RDTB01-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/TB01-JP001
+    set_name: 'Triple Build Pack: Godbreath Wing'
+    rarities:
+    - Over Rush Rare
+yugipedia_page_id: 936324
+---
+konami_id:
+name:
+  en: Harpie Ladies [R]
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ハーピィ<ruby>三姉妹<rt>レディース</rt></ruby>［<ruby>Ｒ<rt>アール</rt></ruby>］
+  ja_romaji: Hāpyi Redīsu [Āru]
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+summoning_condition:
+  en: |-
+    This card's name becomes "Harpie Ladies" while in the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    None
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect_types:
+- Continuous
+effect:
+  en: |-
+    This card's name becomes "Harpie Ladies" and it cannot be destroyed by your opponent's monster effects. Also, if this card is in Maximum Mode, it can make up to 3 attacks on monsters each turn.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Winged Beast / Maximum / Effect
+attribute: WIND
+level: 5
+atk: 2100
+def: 0
+series:
+- Harpie
+images:
+- index: 1
+  image: HarpieLadiesR-RDTB01-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/TB01-JP003
+    set_name: 'Triple Build Pack: Godbreath Wing'
+    rarities:
+    - Over Rush Rare
+yugipedia_page_id: 936327
