--- a/data/cards/yugipedia936292.yaml
+++ b/data/cards/yugipedia936292.yaml
@@ -46,9 +46,11 @@ pendulum_effect:
   ko:
   zh-TW:
   zh-CN:
+materials: 4 Dragon-Type monsters (1 Fusion, 1 Synchro, 1 Xyz, and 1 Pendulum)
 series:
 - Odd-Eyes
 - Supreme King
+- -Eyes Dragon
 images:
 - index: 1
   image: SupremeCelestialKingOddEyesArcRayDragon-AGOV-JP-OP.png
