--- a/rush.yaml
+++ b/rush.yaml
@@ -100512,3 +100512,365 @@ sets:
     rarities:
     - Over Rush Rare
 yugipedia_page_id: 936327
+---
+konami_id:
+name:
+  en: Demolition Dragon Blasthamut
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>幻<rt>げん</rt></ruby><ruby>壊<rt>かい</rt></ruby><ruby>竜<rt>りゅう</rt></ruby>バクハムート
+  ja_romaji: Genkairyū Bakuhamūto
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    If a card is in a Field Zone, send 2 cards from your hand to the Graveyard, including a a Wyrm Type monster.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Destroy all face-up Level 8 or lower monsters on your opponent's field. Then, inflict damage to your opponent equal to [the number of monsters destroyed by this effect] x 300.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Wyrm / Effect
+attribute: FIRE
+level: 8
+atk: 2500
+def: 2000
+series:
+- Demolition
+images:
+- index: 1
+  image: DemolitionDragonBlasthamut-RDTB01-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/TB01-JP040
+    set_name: 'Triple Build Pack: Godbreath Wing'
+    rarities:
+    - Over Rush Rare
+yugipedia_page_id: 936568
+---
+konami_id:
+name:
+  en: Demolition Charge Dragon Dangerous Blasthamut
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>幻<rt>げん</rt></ruby><ruby>壊<rt>かい</rt></ruby><ruby>爆<rt>ばく</rt></ruby><ruby>竜<rt>りゅう</rt></ruby>デンジャラス・バクハムート
+  ja_romaji: Genkai Bakuryū Denjarasu Bakuhamūto
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    None
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Destroy 1 face-up card on your field and 1 or 2 monsters on your opponent's field. Then, inflict damage to your opponent equal to [the number of monsters on your opponent's field that were destroyed by this effect] x 500.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Wyrm / Fusion / Effect
+attribute: FIRE
+level: 9
+atk: 3000
+def: 2500
+materials:
+  en: |-
+    "Demolition Dragon Blasthamut" + "Demolition Soldier Hell Met"
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+series:
+- Demolition
+images:
+- index: 1
+  image: DemolitionChargeDragonDangerousBlasthamut-RDTB01-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/TB01-JP038
+    set_name: 'Triple Build Pack: Godbreath Wing'
+    rarities:
+    - Over Rush Rare
+yugipedia_page_id: 936570
+---
+konami_id:
+name:
+  en: Demolition Soldier Hell Met
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>幻<rt>げん</rt></ruby><ruby>壊<rt>かい</rt></ruby><ruby>兵<rt>へい</rt></ruby>ヘル・メット
+  ja_romaji: Genkaihei Heru Metto
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Send 1 card from your hand to the Graveyard, except "Fusion", and pay 500 LP.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Add 1 "Fusion" from your Graveyard to your hand. Then, you can add 1 Field Spell Card from your Graveyard to your hand.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Wyrm / Effect
+attribute: FIRE
+level: 1
+atk: 400
+def: 400
+series:
+- Demolition
+images:
+- index: 1
+  image: DemolitionSoldierHellMet-RDTB01-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/TB01-JP043
+    set_name: 'Triple Build Pack: Godbreath Wing'
+    rarities:
+    - Common
+yugipedia_page_id: 936571
+---
+konami_id:
+name:
+  en: Demolition Charge Expert Warning Heavy Shock
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>幻<rt>げん</rt></ruby><ruby>壊<rt>かい</rt></ruby><ruby>爆<rt>ばく</rt></ruby><ruby>僚<rt>りょう</rt></ruby>ワーニング・ヘビー・ショック
+  ja_romaji: Genkai Bakuryō Wāningu Hebī Shokku
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    None
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Add 1 Level 8 or higher Wyrm Type monster and/or 1 "Fusion" from your Graveyard to your hand. Then, destroy 1 card on your field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Wyrm / Fusion / Effect
+attribute: FIRE
+level: 9
+atk: 2600
+def: 1700
+materials:
+  en: |-
+    "Demolition Soldier Toby Shock" + "Demolition Soldier Hell Met"
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+series:
+- Demolition
+images:
+- index: 1
+  image: DemolitionChargeExpertWarningHeavyShock-RDTB01-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/TB01-JP039
+    set_name: 'Triple Build Pack: Godbreath Wing'
+    rarities:
+    - Normal Parallel Rare
+yugipedia_page_id: 936574
+---
+konami_id:
+name:
+  en: Demolition Soldier Kasetsu Baiten
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: 幻壊兵カセツ・バイテン
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Pay 500 LP.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Send the top card of your Deck to the Graveyard. Then, if you sent a Wyrm Type monster to the Graveyard by this effect, you can add 1 "Demolition Soldier Hell Met" or Level 8 Wyrm Type monster from your Graveyard to your hand.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Wyrm / Effect
+attribute: FIRE
+level: 4
+atk: 600
+def: 1200
+series:
+- Demolition
+images:
+- index: 1
+  image: DemolitionSoldierKasetsuBaiten-RDTB01-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/TB01-JP041
+    set_name: 'Triple Build Pack: Godbreath Wing'
+    rarities:
+    - Normal Parallel Rare
+yugipedia_page_id: 936576
+---
+konami_id:
+name:
+  en: Demolition Shutter
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>幻<rt>げん</rt></ruby><ruby>壊<rt>かい</rt></ruby><ruby>大鎧戸<rt>シャッター</rt></ruby>
+  ja_romaji: Genkai Shattā
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Equip this card to 1 face-up Wyrm Type monster on your field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    While the equipped monster is in Attack Position, it cannot be destroyed by battle. If a card is in a Field Zone, the equipped monster and this card cannot be destroyed by card effects.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Spell
+property: Equip
+series:
+- Demolition
+images:
+- index: 1
+  image: DemolitionShutter-RDTB01-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/TB01-JP052
+    set_name: 'Triple Build Pack: Godbreath Wing'
+    rarities:
+    - Common
+yugipedia_page_id: 936578
