--- a/rush.yaml
+++ b/rush.yaml
@@ -100773,8 +100773,8 @@ name:
   fr:
   it:
   pt:
-  ja: 幻壊兵カセツ・バイテン
-  ja_romaji:
+  ja: <ruby>幻<rt>げん</rt></ruby><ruby>壊<rt>かい</rt></ruby><ruby>兵<rt>へい</rt></ruby>カセツ・バイテン
+  ja_romaji: Genkaihei Kasetsu Baiten
   ko:
   ko_rr:
   zh-TW:
@@ -100874,3 +100874,101 @@ sets:
     rarities:
     - Common
 yugipedia_page_id: 936578
+---
+konami_id:
+name:
+  en: Demolition Survey
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>幻<rt>げん</rt></ruby><ruby>壊<rt>かい</rt></ruby><ruby>調<rt>ちょう</rt></ruby><ruby>査<rt>さ</rt></ruby>
+  ja_romaji: Genkai Chōsa
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    None
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Send cards from the top of your Deck to the Graveyard equal to [the number of face-up Wyrm Type monsters on your field]. Then, you can add 1 "Demolition Soldier Hell Met" or Field Spell Card from your Graveyard to your hand.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Spell
+property: Normal
+series:
+- Demolition
+images:
+- index: 1
+  image: DemolitionSurvey-RDTB01-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/TB01-JP053
+    set_name: 'Triple Build Pack: Godbreath Wing'
+    rarities:
+    - Common
+yugipedia_page_id: 936580
+---
+konami_id:
+name:
+  en: Demolition Soldier Toby Shock
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>幻<rt>げん</rt></ruby><ruby>壊<rt>かい</rt></ruby><ruby>兵<rt>へい</rt></ruby>トビー・ショック
+  ja_romaji: Genkaihei Tobī Shokku
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+text:
+  en: |-
+    A Demolition Soldier who aims for the top. In order to create his ideal utopia, he engages in endless construction and demolition.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Wyrm / Normal
+attribute: FIRE
+level: 4
+atk: 1500
+def: 0
+series:
+- Demolition
+images:
+- index: 1
+  image: DemolitionSoldierTobyShock-RDTB01-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/TB01-JP046
+    set_name: 'Triple Build Pack: Godbreath Wing'
+    rarities:
+    - Common
+yugipedia_page_id: 936582
