--- a/data/rush/yugipedia936574.yaml
+++ b/data/rush/yugipedia936574.yaml
@@ -7,7 +7,7 @@ name:
   it:
   pt:
   ja: <ruby>幻<rt>げん</rt></ruby><ruby>壊<rt>かい</rt></ruby><ruby>爆<rt>ばく</rt></ruby><ruby>僚<rt>りょう</rt></ruby>ワーニング・ヘビー・ショック
-  ja_romaji: Genkai Bakuryō Wāningu Hebī Shokku
+  ja_romaji: Genkaibakuryō Wāningu Hebī Shokku
   ko:
   ko_rr:
   zh-TW:
