--- a/data/cards/34456146.yaml
+++ b/data/cards/34456146.yaml
@@ -42,7 +42,7 @@ images:
 sets:
   ja:
   - set_number: YOS1-JP001
-    set_name: Yu-Gi-Oh! OCG Stories Volume 1 promotional card
+    set_name: Yu-Gi-Oh! OCG Stories Sky Striker Ace Arc Volume 1 promotional card
     rarities:
     - Ultra Rare
 limit_regulation:
