--- a/data/cards/yugipedia936553.yaml
+++ b/data/cards/yugipedia936553.yaml
@@ -42,7 +42,7 @@ images:
 sets:
   ja:
   - set_number: YOS1-JP002
-    set_name: Yu-Gi-Oh! OCG Stories Volume 2 promotional card
+    set_name: Yu-Gi-Oh! OCG Stories Sky Striker Ace Arc Volume 2 promotional card
     rarities:
     - Ultra Rare
 limit_regulation:
