--- a/data/rush/yugipedia936570.yaml
+++ b/data/rush/yugipedia936570.yaml
@@ -7,7 +7,7 @@ name:
   it:
   pt:
   ja: <ruby>幻<rt>げん</rt></ruby><ruby>壊<rt>かい</rt></ruby><ruby>爆<rt>ばく</rt></ruby><ruby>竜<rt>りゅう</rt></ruby>デンジャラス・バクハムート
-  ja_romaji: Genkai Bakuryū Denjarasu Bakuhamūto
+  ja_romaji: Genkaibakuryū Denjarasu Bakuhamūto
   ko:
   ko_rr:
   zh-TW:
