--- a/rush.yaml
+++ b/rush.yaml
@@ -100579,7 +100579,7 @@ name:
   it:
   pt:
   ja: <ruby>幻<rt>げん</rt></ruby><ruby>壊<rt>かい</rt></ruby><ruby>爆<rt>ばく</rt></ruby><ruby>竜<rt>りゅう</rt></ruby>デンジャラス・バクハムート
-  ja_romaji: Genkai Bakuryū Denjarasu Bakuhamūto
+  ja_romaji: Genkaibakuryū Denjarasu Bakuhamūto
   ko:
   ko_rr:
   zh-TW:
@@ -100705,7 +100705,7 @@ name:
   it:
   pt:
   ja: <ruby>幻<rt>げん</rt></ruby><ruby>壊<rt>かい</rt></ruby><ruby>爆<rt>ばく</rt></ruby><ruby>僚<rt>りょう</rt></ruby>ワーニング・ヘビー・ショック
-  ja_romaji: Genkai Bakuryō Wāningu Hebī Shokku
+  ja_romaji: Genkaibakuryō Wāningu Hebī Shokku
   ko:
   ko_rr:
   zh-TW:
@@ -100884,7 +100884,7 @@ name:
   it:
   pt:
   ja: <ruby>幻<rt>げん</rt></ruby><ruby>壊<rt>かい</rt></ruby><ruby>調<rt>ちょう</rt></ruby><ruby>査<rt>さ</rt></ruby>
-  ja_romaji: Genkai Chōsa
+  ja_romaji: Genkaichōsa
   ko:
   ko_rr:
   zh-TW:
