--- a/data/cards/yugipedia936649.yaml
+++ b/data/cards/yugipedia936649.yaml
@@ -7,14 +7,15 @@ name:
   fr:
   it:
   pt:
-  ja: 超未来融合－オーバーフューチャー・フュージョン
-  ja_romaji:
+  ja: <ruby>超<rt>ちょう</rt></ruby><ruby>未<rt>み</rt></ruby><ruby>来<rt>らい</rt></ruby><ruby>融<rt>ゆう</rt></ruby><ruby>合<rt>ごう</rt></ruby>－オーバーフューチャー・フュージョン
+  ja_romaji: Chō Mirai Yūgō - Ōbā Fyūchā Fyūjon
   ko:
   ko_rr:
   zh-TW:
   zh-CN:
 text:
-  en:
+  en: |-
+    [TBA]
   de:
   es:
   fr:
