--- a/data/rush/16601.yaml
+++ b/data/rush/16601.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 text:
   en: |-
-    The jack of all trades of the Ensemble Squadron. Her gentle melodies give rise to attacks. When she gets excited, the light on her head lights up.
+    The jack of all trades of the band. Her gentle melodies give rise to attacks. When she gets excited, the light on her head lights up.
   de:
   es:
   fr:
