--- a/rush.yaml
+++ b/rush.yaml
@@ -34511,7 +34511,7 @@ name:
   zh-CN:
 text:
   en: |-
-    The jack of all trades of the Ensemble Squadron. Her gentle melodies give rise to attacks. When she gets excited, the light on her head lights up.
+    The jack of all trades of the band. Her gentle melodies give rise to attacks. When she gets excited, the light on her head lights up.
   de:
   es:
   fr:
@@ -100972,3 +100972,341 @@ sets:
     rarities:
     - Common
 yugipedia_page_id: 936582
+---
+konami_id:
+name:
+  en: Trancegodbreath the Music Fiend Deity
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>環<rt>かん</rt></ruby><ruby>幻<rt>げん</rt></ruby><ruby>楽<rt>がっ</rt></ruby><ruby>鬼<rt>き</rt></ruby><ruby>神<rt>しん</rt></ruby>トランスゴッドブレス
+  ja_romaji: Kangengakkishin Toransugoddoburesu
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Send up to 3 cards from your hand to the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    This turn, this card cannot be destroyed by your opponent's Trap Card effects, and if it attacks a Defense Position monster, inflict piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference). Also, if you activated this effect during your Main Phase this card was Special Summoned, it gains ATK equal to [the number of monsters sent to the Graveyard to meet the requirement] x 1000 until the end of this turn.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Warrior / Fusion / Effect
+attribute: WIND
+level: 9
+atk: 3000
+def: 3000
+materials:
+  en: |-
+    "Digisoon the Music Fiend" + "Contacton the Music Princess"
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+series:
+- Music Princess
+images:
+- index: 1
+  image: TrancegodbreaththeMusicFiendDeity-RDTB01-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/TB01-JP018
+    set_name: 'Triple Build Pack: Godbreath Wing'
+    rarities:
+    - Over Rush Rare
+yugipedia_page_id: 937016
+---
+konami_id:
+name:
+  en: Full Orchestra the Music Fiend
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>環<rt>かん</rt></ruby><ruby>幻<rt>げん</rt></ruby><ruby>楽<rt>がっ</rt></ruby><ruby>鬼<rt>き</rt></ruby>フルオルケストラ
+  ja_romaji: Kangengakki Furuorukesutora
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Send 1 card from your hand to the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Destroy all face-down cards in your opponent's Spell & Trap Zone. Then, this card gains ATK equal to [the number of cards destroyed by this effect] x 600 until the end of this turn.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Warrior / Fusion / Effect
+attribute: WIND
+level: 9
+atk: 2900
+def: 2900
+materials:
+  en: |-
+    "Ensembullfighter the Music Fiend" + "Contacton the Music Princess"
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+series:
+- Music Princess
+images:
+- index: 1
+  image: FullOrchestratheMusicFiend-RDTB01-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/TB01-JP019
+    set_name: 'Triple Build Pack: Godbreath Wing'
+    rarities:
+    - Normal Parallel Rare
+yugipedia_page_id: 937017
+---
+konami_id:
+name:
+  en: Tubardiche the Music Princess
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>振<rt>しん</rt></ruby><ruby>楽<rt>がっ</rt></ruby><ruby>姫<rt>き</rt></ruby>チューバルディッシュ
+  ja_romaji: Shingakki Chūbarudisshu
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    You have another face-up Warrior Type monster on your field during the turn you Normal Summoned this card.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Add 1 Level 7 or higher WIND Attribute monster and 1 Warrior Type Normal Monster from your Graveyard to your hand. This turn, you cannot activate monster effects, except WIND Attribute Warrior or Beast Type monsters'.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Warrior / Effect
+attribute: WIND
+level: 6
+atk: 1800
+def: 900
+series:
+- Music Princess
+images:
+- index: 1
+  image: TubardichetheMusicPrincess-RDTB01-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/TB01-JP025
+    set_name: 'Triple Build Pack: Godbreath Wing'
+    rarities:
+    - Super Rare
+yugipedia_page_id: 937018
+---
+konami_id:
+name:
+  en: Music Princess's Requiem Sonata
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>楽<rt>がっ</rt></ruby><ruby>姫<rt>き</rt></ruby>の<ruby>葬<rt>そう</rt></ruby><ruby>奏<rt>そう</rt></ruby><ruby>曲<rt>きょく</rt></ruby>
+  ja_romaji: Gakki no Sōsōkyoku
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    When an opponent's monster declares an attack targeting your Attack Position Level 7 or higher WIND Attribute Warrior or Beast Type monster.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    The attacking monster loses ATK equal to [the attacking monster's Level] x 600 until the end of this turn.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Trap
+property: Normal
+series:
+- Music Princess
+images:
+- index: 1
+  image: MusicPrincesssRequiemSonata-RDTB01-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/TB01-JP034
+    set_name: 'Triple Build Pack: Godbreath Wing'
+    rarities:
+    - Common
+yugipedia_page_id: 937019
+---
+konami_id:
+name:
+  en: Ophiclaymore the Music Princess
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>断<rt>だん</rt></ruby><ruby>楽<rt>がっ</rt></ruby><ruby>姫<rt>き</rt></ruby>オフィクレイモア
+  ja_romaji: Dangakki Ofikureimoa
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+text:
+  en: |-
+    The oldest member of the band. She inspires her comrades with her powerful sound. She feels she can rely on the growth of her kohai, Tubardiche.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Warrior / Normal
+attribute: WIND
+level: 6
+atk: 2100
+def: 400
+series:
+- Music Princess
+images:
+- index: 1
+  image: OphiclaymoretheMusicPrincess-RDTB01-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/TB01-JP027
+    set_name: 'Triple Build Pack: Godbreath Wing'
+    rarities:
+    - Normal Parallel Rare
+yugipedia_page_id: 937020
+---
+konami_id:
+name:
+  en: Contacton the Music Princess
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>揮<rt>き</rt></ruby><ruby>楽<rt>がっ</rt></ruby><ruby>姫<rt>き</rt></ruby>コンタクト
+  ja_romaji: Kigakki Kontakuto
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+text:
+  en: |-
+    The mediator of the band. She conducts her unique and colorful group of friends with her nimble polemanship. She sulks and pouts when people point out her glasses.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Warrior / Normal
+attribute: WIND
+level: 1
+atk: 0
+def: 500
+series:
+- Music Princess
+images:
+- index: 1
+  image: ContactontheMusicPrincess-RDTB01-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/TB01-JP031
+    set_name: 'Triple Build Pack: Godbreath Wing'
+    rarities:
+    - Normal Parallel Rare
+yugipedia_page_id: 937021
