--- a/data/cards/05253985.yaml
+++ b/data/cards/05253985.yaml
@@ -9,8 +9,8 @@ name:
   pt: Cruzar Almas
   ja: <ruby>交<rt>こう</rt></ruby><ruby>差<rt>さ</rt></ruby>する<ruby>魂<rt>たましい</rt></ruby>
   ja_romaji: Kōsasuru Tamashī
-  ko:
-  ko_rr:
+  ko: 교차하는 혼
+  ko_rr: Gyochaha-neun Hon
   zh-TW:
   zh-CN: 交错之魂
 text:
@@ -40,7 +40,8 @@ text:
     Você só pode ativar 1 "Cruzar Almas" por turno.
   ja: |-
     このカード名のカードは１ターンに１枚しか発動できない。①：自分・相手のメインフェイズに発動できる。幻神獣族モンスター１体をアドバンス召喚する。その際、自分フィールドのモンスターの代わりに相手フィールドのモンスターをリリースする事もできる。相手フィールドのモンスターをリリースしてアドバンス召喚した場合、以下の効果を適用する。●このカードの発動後、次のターンの終了時まで自分は幻神獣族モンスター以外の魔法・罠・モンスターの効果を１ターンに１度しか発動できない。
-  ko:
+  ko: |-
+    이 카드명의 카드는 1턴에 1장밖에 발동할 수 없다. ①: 자신 / 상대의 메인 페이즈에 발동할 수 있다. 환신야수족 몬스터 1장을 어드밴스 소환한다. 그 시기에, 자신 필드의 몬스터 대신에 상대 필드의 몬스터를 릴리스할 수도 있다. 상대 필드의 몬스터를 릴리스하고 어드밴스 소환했을 경우, 이하의 효과를 적용한다. ●이 카드의 발동 후, 다음 턴의 종료시까지 자신은 환신야수족 몬스터 이외의 마법 / 함정 / 몬스터의 효과를 1턴에 1번밖에 발동할 수 없다.
   zh-TW:
   zh-CN: |-
     此卡名的卡1回合仅可发动1张。①：在自己・对手的主要阶段可以发动。将1只幻神兽族怪兽上级召唤。在此之际，可解放对手场上的怪兽代替自己场上的怪兽。解放对手场上怪兽上级召唤的情况下，适用以下效果。
