--- a/data/cards/59494222.yaml
+++ b/data/cards/59494222.yaml
@@ -9,8 +9,8 @@ name:
   pt: Inscrição do Coveiro
   ja: <ruby>墓<rt>はか</rt></ruby><ruby>守<rt>もり</rt></ruby>の<ruby>刻<rt>こく</rt></ruby><ruby>印<rt>いん</rt></ruby>
   ja_romaji: Hakamori no Kokuin
-  ko:
-  ko_rr:
+  ko: 묘지기의 각인
+  ko_rr: Yojigi-ui Gak-in
   zh-TW:
   zh-CN: 守墓的刻印
 text:
@@ -49,7 +49,11 @@ text:
     ●お互いに墓地のカードの効果を発動できない。
     ●お互いに墓地のカードを除外できない。
     ●お互いに墓地のモンスターを特殊召喚できない。
-  ko:
+  ko: |-
+    ①: 자신 메인 페이즈 1 개시시에 발동할 수 있다. 이하의 효과에서 1개를 고르고, 상대 턴 종료시까지 적용한다.
+    ●서로 묘지의 카드 효과를 발동할 수 없다.
+    ●서로 묘지의 카드를 제외할 수 없다.
+    ●서로 묘지의 몬스터를 특수 소환할 수 없다.
   zh-TW:
   zh-CN: |-
     ①：自己主要阶段1开始时可以发动。从以下的效果中选1个，直到对手回合结束时适用。
