--- a/data/cards/62967433.yaml
+++ b/data/cards/62967433.yaml
@@ -9,8 +9,8 @@ name:
   pt: Boromet, o Arbusto Sagrado da Ovelha
   ja: <ruby>神<rt>しん</rt></ruby><ruby>羊<rt>よう</rt></ruby><ruby>樹<rt>じゅ</rt></ruby>バロメット
   ja_romaji: Shin'yōju Barometto
-  ko:
-  ko_rr:
+  ko: 신양수 바로메트
+  ko_rr: Sin-yangsu Barometeu
   zh-TW:
   zh-CN: 神羊树 植物羊
 text:
@@ -35,7 +35,9 @@ text:
   ja: |-
     レベル４モンスター×２体以上
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードのＸ素材を１つ取り除き、自分の墓地の通常罠カード１枚を対象として発動できる。そのカードをデッキの一番下に戻す。その後、自分はデッキから１枚ドローする。②：通常罠カードが発動した場合に発動できる。自分フィールドのＸ素材を１つ取り除き、手札からレベル４モンスター１体を特殊召喚する。
-  ko:
+  ko: |-
+    레벨 4 몬스터 × 2장 이상
+    이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 이 카드의 엑시즈 소재를 1개 제거하고, 자신 묘지의 일반 함정 카드 1장을 대상으로 하여 발동할 수 있다. 그 카드를 덱 맨 아래로 되돌린다. 그 후, 자신은 덱에서 1장 드로우한다. ②: 일반 함정 카드가 발동했을 경우에 발동할 수 있다. 자신 필드의 엑시즈 소재를 1개 제거하고, 패에서 레벨 4 몬스터 1장을 특수 소환한다.
   zh-TW:
   zh-CN: |-
     等级4怪兽×2只以上
