--- a/data/cards/86605515.yaml
+++ b/data/cards/86605515.yaml
@@ -9,8 +9,8 @@ name:
   pt: Qardan, o Perspicaz
   ja: <ruby>賢<rt>けん</rt></ruby><ruby>瑞<rt>ずい</rt></ruby><ruby>官<rt>かん</rt></ruby>カルダーン
   ja_romaji: Kenzuikan Karudān
-  ko:
-  ko_rr:
+  ko: 현서관 카르단
+  ko_rr: Hyeonseogwan Kareudan
   zh-TW:
   zh-CN: 贤瑞官 卡丹
 text:
@@ -28,7 +28,8 @@ text:
     Quando este card for Invocado por Invocação-Normal: você pode Baixar 1 Armadilha Contínua da sua mão ou do Cemitério. Ela pode ser ativada neste turno. Se este card for enviado para o Cemitério: você pode ativar este efeito; Armadilhas com a face para cima que você controla não podem ser destruídos pelos efeitos de card do seu oponente até o final do próximo turno.
   ja: |-
     ①：このカードが召喚に成功した時に発動できる。自分の手札・墓地から永続罠カード１枚を選んで自分フィールドにセットする。この効果でセットしたカードはセットしたターンでも発動できる。②：このカードが墓地へ送られた場合に発動できる。次のターンの終了時まで、自分フィールドの表側表示の罠カードは相手の効果では破壊されない。
-  ko:
+  ko: |-
+    ①: 이 카드가 일반 소환에 성공했을 때에 발동할 수 있다. 자신의 패 / 묘지에서 지속 함정 카드 1장을 고르고 자신 필드에 세트한다. 이 효과로 세트한 카드는 세트한 턴에도 발동할 수 있다. ②: 이 카드가 묘지로 보내졌을 경우에 발동할 수 있다. 다음 턴의 종료시까지, 자신 필드의 앞면 표시의 함정 카드는 상대 효과로는 파괴되지 않는다.
   zh-TW:
   zh-CN: |-
     ①：这张卡召唤成功时可以发动。从自己的手牌或墓地选1张永续陷阱卡盖放到自己的场上。用这个效果盖放的卡在盖放的回合也能发动。②：这张卡被送入墓地的场合可以发动。直到下个回合结束时，自己场上的表侧表示的陷阱卡不会被对手的效果破坏。
@@ -72,6 +73,14 @@ sets:
     set_name: V Jump July 2022 promotional card
     rarities:
     - Ultra Rare
+  ko:
+  - set_number: 23PP-KRB08
+    set_name: Premium Pack 2023 2nd Wave
+    rarities:
+    - Common
+    - Normal Parallel Rare
+    - Super Rare
+    - Secret Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
