--- a/data/cards/03103067.yaml
+++ b/data/cards/03103067.yaml
@@ -9,8 +9,8 @@ name:
   pt:
   ja: <ruby>攻<rt>こう</rt></ruby><ruby>撃<rt>げき</rt></ruby><ruby>誘<rt>ゆう</rt></ruby><ruby>導<rt>どう</rt></ruby>アーマー
   ja_romaji: Kōgeki Yūdō Āmā
-  ko:
-  ko_rr:
+  ko: 공격유도 아머
+  ko_rr: Gonggyeonk-yudo Ameo
   zh-TW:
   zh-CN: 攻击诱导装甲
 text:
@@ -28,7 +28,8 @@ text:
     このカード名のカードは１ターンに１枚しか発動できない。①：自分または相手のモンスターの攻撃宣言時に、以下の効果から１つを選択して発動できる。
     ●その攻撃モンスターを破壊する。
     ●その攻撃モンスター以外の自分または相手フィールドのモンスター１体を対象として発動できる。攻撃対象をそのモンスターに移し替えてダメージ計算を行う。
-  ko:
+  ko: |-
+    이 카드명의 카드는 1턴에 1장밖에 발동할 수 없다. ①: 자신 또는 상대 몬스터의 공격 선언시에, 이하의 효과에서 1개를 선택하고 발동할 수 있다. ●그 공격 몬스터를 파괴한다. ●그 공격 몬스터 이외의 자신 또는 상대 필드의 몬스터 1장을 대상으로 하고 발동할 수 있다. 공격 대상을 그 몬스터로 옮겨 데미지 계산을 실행한다.
   zh-TW:
   zh-CN: |-
     这个卡名的卡1回合只能发动1张。①：自己或者对手的怪兽的攻击宣言时，可以从以下的效果中选择1个发动。
