--- a/data/cards/09627468.yaml
+++ b/data/cards/09627468.yaml
@@ -9,8 +9,8 @@ name:
   pt: Enorme Colmeia Hegemon - Zexstagger
   ja: <ruby>甲<rt>こう</rt></ruby><ruby>虫<rt>ちゅう</rt></ruby><ruby>合<rt>がっ</rt></ruby><ruby>体<rt>たい</rt></ruby>ゼクスタッガー
   ja_romaji: Kōchū Gattai Zekusutaggā
-  ko:
-  ko_rr:
+  ko: 갑충합체 젝스태거
+  ko_rr: Gachungbapche Jekseutaegeo
   zh-TW:
   zh-CN: 甲虫合体 六虫锹甲斗士
 text:
@@ -28,7 +28,8 @@ text:
     Ganha 300 de ATK para cada monstro Inseto no campo, exceto este card. Você só pode usar cada um dos seguintes efeitos de "Enorme Colmeia Hegemon - Zexstagger" uma vez por turno. Se um ou mais monstros Inseto forem Invocados por Invocação-Especial (exceto durante a Etapa de Dano): você pode Invocar este card por Invocação-Especial da sua mão. Durante a Fase Final: ative este efeito; cada duelista pode Invocar por Invocação-Especial 1 monstro Inseto da sua mão ou Cemitério, mas negue seus efeitos.
   ja: |-
     このカード名の①③の効果はそれぞれ１ターンに１度しか使用できない。①：昆虫族モンスターが特殊召喚された場合に発動できる。このカードを手札から特殊召喚する。②：このカードの攻撃力は、フィールドの他の昆虫族モンスターの数×３００アップする。③：自分・相手のエンドフェイズに発動する。お互いは自身の手札・墓地から昆虫族モンスター１体を選んで特殊召喚できる。この効果で特殊召喚したモンスターの効果は無効化される。
-  ko:
+  ko: |-
+    이 카드명의 ①③의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 곤충족 몬스터가 특수 소환되었을 경우에 발동할 수 있다. 이 카드를 패에서 특수 소환한다. ②: 이 카드의 공격력은, 필드의 다른 곤충족 몬스터의 수 × 300 올린다. ③: 자신 / 상대의 엔드 페이즈에 발동한다. 양쪽 플레이어는 자신의 패 / 묘지에서 곤충족 몬스터 1장을 고르고 특수 소환할 수 있다. 이 효과로 특수 소환한 몬스터 효과는 무효화된다.
   zh-TW:
   zh-CN: |-
     这个卡名的①③的效果1回合各能使用1次。
