--- a/data/cards/12527118.yaml
+++ b/data/cards/12527118.yaml
@@ -9,8 +9,8 @@ name:
   pt: Cassimolar
   ja: カシモラル
   ja_romaji: Kashimoraru
-  ko:
-  ko_rr:
+  ko: 카시모라르
+  ko_rr: Kasimorareu
   zh-TW:
   zh-CN: 卡西莫拉尔
 text:
@@ -28,7 +28,8 @@ text:
     Quando este card for Invocado por Invocação-Normal: você pode escolher 1 monstro com a face para cima que seu oponente controla; ele ganha ATK igual ao seu ATK original e, além disso, durante a Fase Final do próximo turno, destrua esse monstro com a face para cima e, se isso acontecer, seu oponente sofre dano igual à metade do seu ATK original. No começo da Fase de Batalha do seu oponente: você pode oferecer como Tributo este card Invocado por Invocação-Normal/Baixado; os monstros do seu oponente não podem atacar diretamente pelo resto deste turno.
   ja: |-
     ①：このカードが召喚に成功した時、相手フィールドの表側表示モンスター１体を対象として発動できる。そのモンスターの攻撃力は、その元々の攻撃力分アップする。この効果が適用されているモンスターは次のターンのエンドフェイズに破壊され、相手はその元々の攻撃力の半分のダメージを受ける。②：相手バトルフェイズ開始時に、通常召喚したこのカードをリリースして発動できる。このターン、相手モンスターは直接攻撃できない。
-  ko:
+  ko: |-
+    ①: 이 카드가 일반 소환에 성공했을 때, 상대 필드의 앞면 표시 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터의 공격력은, 그 원래 공격력만큼 올린다. 이 효과가 적용되어 있는 몬스터는 다음 턴의 엔드 페이즈에 파괴되고, 상대는 그 원래 공격력 절반의 데미지를 받는다. ②: 상대 배틀 페이즈 개시시에, 통상 소환한 이 카드를 릴리스하고 발동할 수 있다. 이 턴에, 상대 몬스터는 직접 공격할 수 없다.
   zh-TW:
   zh-CN: |-
     ①：这张卡召唤成功时，以对方场上1只表侧表示怪兽为对象才能发动。那只怪兽的攻击力上升那个原本攻击力数值。这个效果适用的怪兽在下个回合的结束阶段破坏，对方受到那个原本攻击力一半数值的伤害。②：对方战斗阶段开始时，把通常召唤的这张卡解放才能发动。这个回合，对方怪兽不能直接攻击。
@@ -72,6 +73,14 @@ sets:
     set_name: V Jump Spring 2022 subscription bonus
     rarities:
     - Ultra Rare
+  ko:
+  - set_number: 23PP-KRB06
+    set_name: Premium Pack 2023 2nd Wave
+    rarities:
+    - Common
+    - Normal Parallel Rare
+    - Super Rare
+    - Secret Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
