--- a/data/cards/13302026.yaml
+++ b/data/cards/13302026.yaml
@@ -9,8 +9,8 @@ name:
   pt: Rainha Borboleta Danaus
   ja: クイーン・バタフライ ダナウス
   ja_romaji: Kuīn Batafurai Danausu
-  ko:
-  ko_rr:
+  ko: 퀸 버터플라이 다나우스
+  ko_rr: Kwin Beoteopeullai Danauseu
   zh-TW:
   zh-CN: 女王蝶 斑蝶
 text:
@@ -28,7 +28,8 @@ text:
     Se você controlar este card Invocado por Invocação-Normal/Baixado (Efeito Rápido): você pode escolher até 3 monstros Inseto de Nível 4 ou menos no seu Cemitério; mude o ATK deste card para 0 e, se isso acontecer, Invoque esses monstros por Invocação-Especial, mas seus efeitos são negados. Você só pode usar este efeito de "Rainha Borboleta Danaus" uma vez por turno.
   ja: |-
     このカード名の効果は１ターンに１度しか使用できない。①：このカードが通常召喚されている場合、自分の墓地のレベル４以下の昆虫族モンスターを３体まで対象として発動できる。このカードの攻撃力を０にし、対象のモンスターを特殊召喚する。この効果で特殊召喚したモンスターの効果は無効化される。この効果は相手ターンでも発動できる。
-  ko:
+  ko: |-
+    이 카드명의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 통상 소환되어 있을 경우, 자신 묘지의 레벨 4 이하의 곤충족 몬스터를 3장까지 대상으로 하고 발동할 수 있다. 이 카드의 공격력을 0 으로 하고, 대상 몬스터를 특수 소환한다. 이 효과로 특수 소환한 몬스터 효과는 무효화된다. 이 효과는 상대 턴에도 발동할 수 있다.
   zh-TW:
   zh-CN: |-
     这个卡名的效果1回合只能使用1次。
