--- a/data/cards/15198996.yaml
+++ b/data/cards/15198996.yaml
@@ -9,8 +9,8 @@ name:
   pt: Ninja Verde
   ja: <ruby>若い<rt>グリーン</rt></ruby><ruby>忍<rt>にん</rt></ruby><ruby>者<rt>じゃ</rt></ruby>
   ja_romaji: Gurīn Ninja
-  ko:
-  ko_rr:
+  ko: 초록 첩자
+  ko_rr: Chorok Cheopja
   zh-TW:
   zh-CN: 稚绿忍者
 text:
@@ -28,7 +28,8 @@ text:
     Se um ou mais monstros forem Invocados por Invocação-Especial com a face para cima no seu campo (exceto durante a Etapa de Dano): você pode escolher 1 deles; Invoque este card por Invocação-Especial da sua mão e, se isso acontecer, coloque esse monstro com a face para baixo em Posição de Defesa. Se este card for enviado da mão ou do campo para o Cemitério: você pode escolher 1 monstro no campo; coloque-o com a face para cima em Posição de Ataque ou com a face para baixo em Posição de Defesa. Você só pode usar cada efeito de "Ninja Verde" uma vez por turno.
   ja: |-
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：自分フィールドにモンスターが表側表示で特殊召喚された場合、そのモンスター１体を対象として発動できる。このカードを手札から特殊召喚し、対象のモンスターを裏側守備表示にする。②：このカードが手札・フィールドから墓地へ送られた場合、フィールドのモンスター１体を対象として発動できる。そのモンスターを表側攻撃表示または裏側守備表示にする。
-  ko:
+  ko: |-
+    이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 자신 필드에 몬스터가 앞면 표시로 특수 소환되었을 경우, 그 몬스터 1장을 대상으로 하고 발동할 수 있다. 이 카드를 패에서 특수 소환하고, 대상 몬스터를 뒷면 수비 표시로 한다. ②: 이 카드가 패 / 필드에서 묘지로 보내졌을 경우, 필드의 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 앞면 공격 표시 또는 뒷면 수비 표시로 한다.
   zh-TW:
   zh-CN: |-
     这个卡名的①②效果1回合各能使用1次。①：自己场上有怪兽以表侧表示特殊召唤的场合，可以以那样的1只怪兽为对象发动。将这张卡从手牌特殊召唤，对象怪兽变为里侧守备表示。②：这张卡从手牌或场上送入墓地的场合，可以以场上的1只怪兽为对象发动。使那只怪兽变为表侧攻击表示或者里侧守备表示。
