--- a/data/cards/16720314.yaml
+++ b/data/cards/16720314.yaml
@@ -9,8 +9,8 @@ name:
   pt: Poção Sorridente
   ja: スマイル・ポーション
   ja_romaji: Sumairu Pōshon
-  ko:
-  ko_rr:
+  ko: 스마일 포션
+  ko_rr: Seumail Posyeon
   zh-TW:
   zh-CN: 笑容药水
 text:
@@ -28,7 +28,8 @@ text:
     Se seu oponente controlar um monstro cujo ATK atual seja maior que seu ATK original, enquanto você não controlar nenhum monstro: compre 2 cards. Você só pode ativar 1 "Poção Sorridente" por turno.
   ja: |-
     このカード名のカードは１ターンに１枚しか発動できない。①：自分フィールドにモンスターが存在せず、元々の攻撃力より高い攻撃力を持つモンスターが相手フィールドに存在する場合に発動できる。自分はデッキから２枚ドローする。
-  ko:
+  ko: |-
+    이 카드명의 카드는 1턴에 1장밖에 발동할 수 없다. ①: 자신 필드에 몬스터가 존재하지 않으며, 원래 공격력보다 높은 공격력을 가지는 몬스터가 상대 필드에 존재할 경우에 발동할 수 있다. 자신은 덱에서 2장 드로우한다.
   zh-TW:
   zh-CN: |-
     这个卡名的卡在1回合只能发动1张。
@@ -71,6 +72,14 @@ sets:
     set_name: Tournament Pack 2019 Vol.1
     rarities:
     - Common
+  ko:
+  - set_number: 23PP-KRB01
+    set_name: Premium Pack 2023 2nd Wave
+    rarities:
+    - Common
+    - Normal Parallel Rare
+    - Super Rare
+    - Secret Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
