--- a/data/cards/22634473.yaml
+++ b/data/cards/22634473.yaml
@@ -9,8 +9,8 @@ name:
   pt: Rivais Destinados
   ja: <ruby>対<rt>たい</rt></ruby><ruby>峙<rt>じ</rt></ruby>する<ruby>宿<rt>しゅく</rt></ruby><ruby>命<rt>めい</rt></ruby>
   ja_romaji: Taijisuru Shukumei
-  ko:
-  ko_rr:
+  ko: 대치의 숙명
+  ko_rr: Daechi-ui Sukmyeong
   zh-TW:
   zh-CN: 对峙的宿命
 text:
@@ -28,7 +28,8 @@ text:
     Se você controlar "Dragão Branco de Olhos Azuis" ou "Mago Negro": até o final deste turno, negue os efeitos de todos os monstros com a face para cima que seu oponente controla atualmente. Você só pode ativar 1 "Rivais Destinados" por turno.
   ja: |-
     このカード名のカードは１ターンに１枚しか発動できない。①：自分フィールドに「青眼の白龍」または「ブラック・マジシャン」が存在する場合に発動できる。相手フィールドの全ての表側表示モンスターの効果はターン終了時まで無効化される。
-  ko:
+  ko: |-
+    이 카드명의 카드는 1턴에 1장밖에 발동할 수 없다. ①: 자신 필드에 "푸른 눈의 백룡" 또는 "블랙 매지션"이 존재할 경우에 발동할 수 있다. 상대 필드의 모든 앞면 표시 몬스터의 효과는 턴 종료시까지 무효화된다.
   zh-TW:
   zh-CN: |-
     此卡名的卡1回合仅可发动1张。①：自己场上有“青眼白龙”或“黑魔导”存在的情况下可以发动。对手场上所有表侧表示怪兽的效果直至回合结束时为止无效化。
