--- a/data/cards/23099524.yaml
+++ b/data/cards/23099524.yaml
@@ -9,8 +9,8 @@ name:
   pt: Advento Faraônico
   ja: ファラオニック・アドベント
   ja_romaji: Faraonikku Adobento
-  ko:
-  ko_rr:
+  ko: 파라오닉 어드벤트
+  ko_rr: Palaonik Eodeubenteu
   zh-TW:
   zh-CN: 法老的降临
 text:
@@ -28,7 +28,8 @@ text:
     Ganha 300 de ATK para cada Armadilha Contínua no campo e nos Cemitérios. Você só pode usar cada um dos seguintes efeitos de "Advento Faraônico" uma vez por turno. Você pode oferecer 1 monstro como Tributo; Invoque este card por Invocação-Especial da sua mão. Você pode oferecer como Tributo 1 monstro Fada, Demônio ou Réptil; adicione 1 Armadilha Contínua do seu Deck à sua mão e, além disso, você não pode Invocar monstros por Invocação-Especial pelo resto deste turno.
   ja: |-
     このカード名の①③の効果はそれぞれ１ターンに１度しか使用できない。①：自分フィールドのモンスター１体をリリースして発動できる。このカードを手札から特殊召喚する。②：このカードの攻撃力は、お互いのフィールド・墓地の永続罠カードの数×３００アップする。③：自分フィールドの天使族・悪魔族・爬虫類族モンスター１体をリリースして発動できる。デッキから永続罠カード１枚を手札に加える。この効果の発動後、ターン終了時まで自分はモンスターを特殊召喚できない。
-  ko:
+  ko: |-
+    이 카드명의 ①③의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 자신 필드의 몬스터 1장을 릴리스하고 발동할 수 있다. 이 카드를 패에서 특수 소환한다. ②: 이 카드의 공격력은, 서로의 필드 / 묘지의 지속 함정 카드의 수 × 300 올린다. ③: 자신 필드의 천사족 / 악마족 / 파충류족 몬스터 1장을 릴리스하고 발동할 수 있다. 덱에서 지속 함정 카드 1장을 패에 넣는다. 이 효과의 발동 후, 턴 종료시까지 자신은 몬스터를 특수 소환할 수 없다.
   zh-TW:
   zh-CN: |-
     这个卡名的①③效果1回合各能使用1次。①：可以将自己场上的1只怪兽解放发动。将这张卡从手牌特殊召唤。②：这张卡的攻击力上升双方的场上、墓地的永续陷阱卡的数量×300。③：可以将自己场上的1只天使族、恶魔族或爬虫类族怪兽解放发动。从卡组将1张永续陷阱卡加入手牌。这个效果发动后，直到回合结束时自己不能特殊召唤怪兽。
@@ -72,6 +73,14 @@ sets:
     set_name: Pharaonic Legend Pack
     rarities:
     - Prismatic Secret Rare
+  ko:
+  - set_number: 23PP-KRB09
+    set_name: Premium Pack 2023 2nd Wave
+    rarities:
+    - Common
+    - Normal Parallel Rare
+    - Super Rare
+    - Secret Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
