--- a/data/cards/26988374.yaml
+++ b/data/cards/26988374.yaml
@@ -9,8 +9,8 @@ name:
   pt:
   ja: <ruby>魔<rt>ま</rt></ruby><ruby>鍵<rt>けん</rt></ruby><ruby>憑<rt>ひょう</rt></ruby><ruby>神<rt>じん</rt></ruby>－アシュタルトゥ
   ja_romaji: Makenhyōjin - Ashutarutu
-  ko:
-  ko_rr:
+  ko: 마건빙선－아슈타르투
+  ko_rr: Mageonbingseon - Asyutareutu
   zh-TW:
   zh-CN: 魔键凭神-阿斯塔尔图
 text:
@@ -25,7 +25,9 @@ text:
   ja: |-
     レベル８モンスター×２
     ①：１ターンに１度、自分の通常モンスターまたは「魔鍵」モンスターが戦闘で相手モンスターを破壊した時、このカードのＸ素材を１つ取り除いて発動できる。その破壊されたモンスターの元々の攻撃力分のダメージを相手に与える。②：相手メインフェイズに１度、自分のフィールド・墓地の、通常モンスターまたは「魔鍵」モンスターのいずれかと同じ属性を持つ、相手フィールドのモンスター１体を対象として発動できる。このカードのＸ素材を１つ取り除き、対象のモンスターを除外する。
-  ko:
+  ko: |-
+    레벨 8 몬스터 × 2
+    ①: 1턴에 1번, 자신의 일반 몬스터 또는 "마건" 몬스터가 전투로 상대 몬스터를 파괴했을 때, 이 카드의 엑시즈 소재를 1개 제거하고 발동할 수 있다. 그 파괴된 몬스터의 원래 공격력만큼의 데미지를 상대에게 준다. ②: 상대 메인 페이즈에 1번, 자신의 필드 / 묘지의, 일반 몬스터 또는 "마건" 몬스터의 어느 것과 같은 속성을 가지는, 상대 필드의 몬스터 1장을 대상으로 하고 발동할 수 있다. 이 카드의 엑시즈 소재를 1개 제거하고, 대상 몬스터를 제외한다.
   zh-TW:
   zh-CN: |-
     等级8怪兽×2
