--- a/data/cards/32247099.yaml
+++ b/data/cards/32247099.yaml
@@ -9,8 +9,8 @@ name:
   pt: Besta Divina Definitiva
   ja: <ruby>絶<rt>ぜっ</rt></ruby><ruby>対<rt>たい</rt></ruby>なる<ruby>幻<rt>げん</rt></ruby><ruby>神<rt>しん</rt></ruby><ruby>獣<rt>じゅう</rt></ruby>
   ja_romaji: Zettainaru Genshinjū
-  ko:
-  ko_rr:
+  ko: 절대적인 환신야수
+  ko_rr: Jeoldaejeok-in Hwansin-yasu
   zh-TW:
   zh-CN: 绝对之幻神兽
 text:
@@ -28,7 +28,8 @@ text:
     Quando um monstro do oponente declarar um ataque: você pode descartar 1 Magia/Armadilha e, depois, escolha 1 monstro Besta Divina no seu Cemitério; Invoque-o por Invocação-Especial em Posição de Defesa e, depois, mude o alvo do ataque para ele. Durante a Fase Final, se você controlar um monstro Besta Divina: você pode destruir todos os cards com a face para cima que seu oponente controla que ativaram seus efeitos no campo neste turno. Você só pode usar cada efeito de "Besta Divina Definitiva" uma vez por turno.
   ja: |-
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：相手モンスターの攻撃宣言時に、手札から魔法・罠カード１枚を捨て、自分の墓地の幻神獣族モンスター１体を対象として発動できる。そのモンスターを守備表示で特殊召喚する。その後、攻撃対象をそのモンスターに移し替える。②：自分フィールドに幻神獣族モンスターが存在する場合、エンドフェイズに発動できる。このターンにフィールドで効果を発動した、相手フィールドの表側表示のカードを全て破壊する。
-  ko:
+  ko: |-
+    이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 상대 몬스터의 공격 선언시에, 패에서 마법 / 함정 카드 1장을 버리고, 자신 묘지의 환신야수족 몬스터 1장을 대상으로 하여 발동할 수 있다. 그 몬스터를 수비 표시로 특수 소환한다. 그 후, 공격 대상을 그 몬스터로 옮긴다. ②: 자신 필드에 환신야수족 몬스터가 존재할 경우, 엔드 페이즈에 발동할 수 있다. 이 턴에 필드에서 효과를 발동한, 상대 필드의 앞면 표시의 카드를 전부 파괴한다.
   zh-TW:
   zh-CN: |-
     此卡名的①②效果1回合仅可各使用1次。①：对手怪兽攻击宣言时，从手牌舍弃1张魔法・陷阱卡，以自己墓地的1只幻神兽族怪兽为对象可以发动。以守备表示形式将该怪兽特殊召唤。然后，攻击对象移换为该怪兽。②：自己场上有幻神兽族怪兽存在的情况下，在结束阶段可以发动。将此回合在场上发动过效果的对手场上的表侧表示卡全部破坏。
