--- a/data/cards/34456146.yaml
+++ b/data/cards/34456146.yaml
@@ -9,8 +9,8 @@ name:
   pt:
   ja: <ruby>慈<rt>じ</rt></ruby><ruby>愛<rt>あい</rt></ruby>の<ruby>賢<rt>けん</rt></ruby><ruby>者<rt>じゃ</rt></ruby>－シエラ
   ja_romaji: Jiai no Kenja - Shiera
-  ko:
-  ko_rr:
+  ko: 자애의 현자－시에라
+  ko_rr: Jayae-ui Hyeonja - Siera
   zh-TW:
   zh-CN: 慈爱之贤者-希耶拉
 text:
@@ -24,7 +24,8 @@ text:
   pt:
   ja: |-
     このカード名はルール上「閃刀」カードとしても扱う。このカード名の①②③の効果はそれぞれ１ターンに１度しか使用できない。①：手札から魔法カード１枚を捨てて発動できる。このカードを手札から特殊召喚する。②：自分の墓地から魔法カード１枚を除外して発動できる。このカードのコントロールを相手に移し、自分の墓地から「閃刀姫」モンスター１体を選んで特殊召喚する。③：このカードが戦闘・効果で破壊され墓地へ送られた場合、除外されている自分の「閃刀」魔法カード１枚を対象として発動できる。そのカードを手札に加える。
-  ko:
+  ko: |-
+    이 카드명은 룰상 "섬도" 카드로도 취급한다. 이 카드명의 ①②③의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 패에서 마법 카드 1장을 버리고 발동할 수 있다. 이 카드를 패에서 특수 소환한다. ②: 자신 묘지에서 마법 카드 1장을 제외하고 발동할 수 있다. 이 카드의 컨트롤을 상대에게 옮기고, 자신 묘지에서 "섬도희" 몬스터 1장을 골라 특수 소환한다. ③: 이 카드가 전투 / 효과로 파괴되어 묘지로 보내졌을 경우, 제외되어 있는 자신의 "섬도" 마법 카드 1장을 대상으로 하고 발동할 수 있다. 그 카드를 패에 넣는다.
   zh-TW:
   zh-CN: |-
     这个卡名规则上也当作「閃刀／闪刀」卡使用。这个卡名的①②③效果1回合各能使用1次。①：可以从手牌舍弃1张魔法卡发动。将这张卡从手牌特殊召唤。②：可以从自己的墓地将1张魔法卡除外发动。这张卡的操作权转移给对手，从自己的墓地选1只「閃刀姫／闪刀姬」怪兽特殊召唤。③：这张卡被战斗或效果破坏并送入墓地的场合，可以以除外中的1张自己的「閃刀／闪刀」魔法卡为对象发动。将那张卡加入手牌。
