--- a/data/cards/38105306.yaml
+++ b/data/cards/38105306.yaml
@@ -9,8 +9,8 @@ name:
   pt:
   ja: <ruby>削<rt>けず</rt></ruby>りゆく<ruby>命<rt>いのち</rt></ruby>
   ja_romaji: Kezuriyuku Inochi
-  ko:
-  ko_rr:
+  ko: 꺼져가는 생명
+  ko_rr: Tteojyeoga-neun Saengmyeong
   zh-TW:
   zh-CN: 逐渐削减的生命
 text:
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     ①：「削りゆく命」は自分フィールドに１枚しか表側表示で存在できない。②：相手エンドフェイズに発動する。このカードにカウンターを１つ置く。③：このカードにカウンターが置かれている場合、自分・相手のメインフェイズ及びバトルフェイズに発動できる。このカードを墓地へ送る。その後、このカードに置かれていたカウンターの数まで、相手は手札を可能な限り選んで捨てる。
-  ko:
+  ko: |-
+    ①: "꺼져가는 생명"은 자신 필드에 1장밖에 앞면 표시로 존재할 수 없다. ②: 상대 엔드 페이즈에 발동한다. 이 카드에 카운터를 1개 놓는다. ③: 이 카드에 카운터가 놓여 있을 경우, 자신 / 상대의 메인 페이즈 및 배틀 페이즈에 발동할 수 있다. 이 카드를 묘지로 보낸다. 그 후, 이 카드에 놓여 있던 카운터의 수까지, 상대는 패를 가능한 한 고르고 버린다.
   zh-TW:
   zh-CN: |-
     ①：「削りゆく命／逐渐削减的生命」在自己场上只能有1张以表侧表示存在。②：对手的结束阶段必定发动。在这张卡上放置1个指示物。③：这张卡放置有指示物的场合，自己或对手的主要阶段以及战斗阶段可以发动。将这张卡送入墓地。那之后，按照这张卡放置过的指示物的数量，对手尽可能多地选手牌舍弃。
