--- a/data/cards/42469671.yaml
+++ b/data/cards/42469671.yaml
@@ -9,8 +9,8 @@ name:
   pt: Ataque Força Trovão
   ja: <ruby>超<rt>ちょう</rt></ruby><ruby>電<rt>でん</rt></ruby><ruby>導<rt>どう</rt></ruby><ruby>波<rt>は</rt></ruby>サンダーフォース
   ja_romaji: Chōdendōha Sandāfōsu
-  ko:
-  ko_rr:
+  ko: 초전도파 썬더포스
+  ko_rr: Chojeondopa Sseondeoposeu
   zh-TW:
   zh-CN: 超电导波雷击炮
 text:
@@ -40,7 +40,8 @@ text:
     Você só pode ativar 1 "Ataque Força Trovão" por turno.
   ja: |-
     このカード名のカードは１ターンに１枚しか発動できない。このカードの発動と効果は無効化されない。①：自分フィールドに元々のカード名が「オシリスの天空竜」となるモンスターが存在する場合に発動できる。相手フィールドの表側表示モンスターを全て破壊する。このカードを自分メインフェイズに発動した場合、さらに以下の効果を適用できる。●この効果で破壊され相手の墓地へ送られたモンスターの数だけ、自分はデッキからドローする。このターン、自分はモンスター１体でしか攻撃できない。
-  ko:
+  ko: |-
+    이 카드명의 카드는 1턴에 1장밖에 발동할 수 없다. 이 카드의 발동과 효과는 무효화되지 않는다. ①: 자신 필드에 원래의 카드명이 "오시리스의 천공룡"이 되는 몬스터가 존재할 경우에 발동할 수 있다. 상대 필드의 앞면 표시 몬스터를 전부 파괴한다. 이 카드를 자신 메인 페이즈에 발동했을 경우, 추가로 이하의 효과를 적용할 수 있다. ●이 효과로 파괴되어 상대 묘지로 보내진 몬스터의 수만큼, 자신은 덱에서 드로우한다. 이 턴에, 자신은 몬스터 1장으로밖에 공격할 수 없다.
   zh-TW:
   zh-CN: |-
     此卡名的卡1回合仅可发动1张。此卡的发动和效果不会被无效化。①：自己场上有原本卡名为"欧西里斯之天空龙"的怪兽的情况下可以发动。将对手场上的表侧表示怪兽全部破坏。此卡在自己的主要阶段发动的情况下，进而可以适用以下效果。
