--- a/data/cards/54878729.yaml
+++ b/data/cards/54878729.yaml
@@ -9,8 +9,8 @@ name:
   pt:
   ja: クロニクル・ソーサレス
   ja_romaji: Kuronikuru Sōsaresu
-  ko:
-  ko_rr:
+  ko: 크로니클 소서리스
+  ko_rr: Keuronikeul Soseoriseu
   zh-TW:
   zh-CN: 编年史女术士
 text:
@@ -28,7 +28,10 @@ text:
     このカード名の効果は１ターンに１度しか使用できない。①：自分の墓地のモンスターの属性によって以下の効果から１つを選択して発動できる。
     ●光：「クロニクル・ソーサレス」を除く、「青眼の白龍」１体またはそのカード名が記されたカード１枚をデッキから墓地へ送る。
     ●闇：「クロニクル・ソーサレス」を除く、「ブラック・マジシャン」１体またはそのカード名が記されたカード１枚をデッキから墓地へ送る。
-  ko:
+  ko: |-
+    이 카드명의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 자신 묘지의 몬스터 속성에 따라 이하의 효과에서 1개를 선택하고 발동할 수 있다.
+    ●빛: "크로니클 소서리스"가 아닌, "푸른 눈의 백룡" 1장 또는 그 카드명이 쓰여진 카드 1장을 덱에서 묘지로 보낸다.
+    ●어둠: "크로니클 소서리스"가 아닌, "블랙 매지션" 1장 또는 그 카드명이 쓰여진 카드 1장을 덱에서 묘지로 보낸다.
   zh-TW:
   zh-CN: |-
     这个卡名的效果1回合只能使用1次。①：可以根据自己墓地的怪兽的属性来从以下的效果中选择1个发动。●光：从卡组将除「クロニクル・ソーサレス／编年史女术士」以外的、1只「青眼の白龍／蓝眼白龙」或者1张记述了其卡名的卡送入墓地。●暗：从卡组将除「クロニクル・ソーサレス／编年史女术士」以外的、1只「ブラック・マジシャン／黑魔导士」或者1张记述了其卡名的卡送入墓地。
