--- a/data/cards/64475743.yaml
+++ b/data/cards/64475743.yaml
@@ -9,8 +9,8 @@ name:
   pt: Rabigatinha, Besta Mística da Floresta
   ja: <ruby>森<rt>もり</rt></ruby>の<ruby>聖<rt>せい</rt></ruby><ruby>獣<rt>じゅう</rt></ruby> キティテール
   ja_romaji: Mori no Seijū Kititēru
-  ko:
-  ko_rr:
+  ko: 숲의 성수 키티테일
+  ko_rr: Sup-ui Seongsu Kititeil
   zh-TW:
   zh-CN: 森之圣兽 红毛苋小猫
 text:
@@ -28,7 +28,8 @@ text:
     Se este card for Invocado por Invocação-Normal ou Especial: você pode escolher 1 monstro Besta, Besta-Guerreira, Besta Alada, Inseto ou Planta no seu Cemitério; envie 1 monstro do seu Deck para o Cemitério com o mesmo Tipo original que o desse monstro. Se este card em posse do seu dono for destruído por um card do oponente: você pode adicionar 1 monstro Besta, Besta-Guerreira, Besta Alada, Inseto ou Planta do seu Deck à sua mão, exceto "Rabigatinha, Besta Mística da Floresta". Você só pode usar cada efeito de "Rabigatinha, Besta Mística da Floresta" uma vez por turno.
   ja: |-
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードが召喚・特殊召喚に成功した場合、自分の墓地の獣族・獣戦士族・鳥獣族・昆虫族・植物族モンスター１体を対象として発動できる。そのモンスターと元々の種族が同じとなるモンスター１体をデッキから墓地へ送る。②：このカードが相手によって破壊された場合に発動できる。デッキから「森の聖獣 キティテール」以外の獣族・獣戦士族・鳥獣族・昆虫族・植物族モンスター１体を手札に加える。
-  ko:
+  ko: |-
+    이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 일반 소환 / 특수 소환에 성공했을 경우, 자신 묘지의 야수족 / 야수전사족 / 비행야수족 / 곤충족 / 식물족 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터와 원래의 종족이 같아지는 몬스터 1장을 덱에서 묘지로 보낸다. ②: 이 카드가 상대에 의해 파괴되었을 경우에 발동할 수 있다. 덱에서 "숲의 성수 키티테일" 이외의 야수족 / 야수전사족 / 비행야수족 / 곤충족 / 식물족 몬스터 1장을 패에 넣는다.
   zh-TW:
   zh-CN: |-
     这个卡名的①②的效果1回合各能使用1次。
