--- a/data/cards/69145169.yaml
+++ b/data/cards/69145169.yaml
@@ -9,8 +9,8 @@ name:
   pt: Alma do Sucessor
   ja: <ruby>受<rt>う</rt></ruby>け<ruby>継<rt>つ</rt></ruby>ぎし<ruby>魂<rt>たましい</rt></ruby>
   ja_romaji: Uketsugishi Tamashī
-  ko:
-  ko_rr:
+  ko: 이어받은 혼
+  ko_rr: Ieobat-eun Hon
   zh-TW:
   zh-CN: 承继之魂
 text:
@@ -28,7 +28,8 @@ text:
     Ofereça como Tributo 1 Monstro de Efeito e, depois, escolha 1 Monstro de Efeito que seu oponente controla; envie-o para o Cemitério e, depois, Invoque por Invocação-Especial 1 Monstro Normal de Nível 7 ou mais da sua mão ou do Deck. Você só pode ativar 1 "Alma do Sucessor" por turno. Você só pode atacar com 1 monstro durante o turno em que ativar este card.
   ja: |-
     このカード名のカードは１ターンに１枚しか発動できず、このカードを発動するターン、自分はモンスター１体でしか攻撃できない。①：自分フィールドの効果モンスター１体をリリースし、相手フィールドの効果モンスター１体を対象として発動できる。そのモンスターを墓地へ送る。その後、手札・デッキからレベル７以上の通常モンスター１体を自分フィールドに特殊召喚する。
-  ko:
+  ko: |-
+    이 카드명의 카드는 1턴에 1장밖에 발동할 수 없으며, 이 카드를 발동하는 턴에, 자신은 몬스터 1장으로밖에 공격할 수 없다. ①: 자신 필드의 효과 몬스터 1장을 릴리스하고, 상대 필드의 효과 몬스터 1장을 대상으로 하여 발동할 수 있다. 그 몬스터를 묘지로 보낸다. 그 후, 패 / 덱에서 레벨 7 이상의 일반 몬스터 1장을 자신 필드에 특수 소환한다.
   zh-TW:
   zh-CN: |-
     此卡名的卡1回合仅可发动1张，发动此卡的回合中，自己仅可用1只怪兽攻击。①：解放自己场上的1只效果怪兽，以对手场上的1只效果怪兽为对象可以发动。将该怪兽送至墓地。然后从手牌・牌组将1只等级7以上的通常怪兽特殊召唤至自己场上。
