--- a/data/cards/75311421.yaml
+++ b/data/cards/75311421.yaml
@@ -9,8 +9,8 @@ name:
   pt: Votis
   ja: ボティス
   ja_romaji: Botisu
-  ko:
-  ko_rr:
+  ko: 보티스
+  ko_rr: Botiseu
   zh-TW:
   zh-CN: 波提斯
 text:
@@ -28,7 +28,8 @@ text:
     Quando este card for Invocado por Invocação-Normal: você pode escavar os 3 cards do topo do seu Deck e, se isso acontecer, você pode banir 1 monstro escavado para adicionar à sua mão 1 monstro com seu mesmo nome, do seu Deck ou dentre os outros cards escavados e, além disso, embaralhe o resto no Deck. Uma vez por turno, durante a Fase Final, se este card estiver no seu Cemitério porque foi enviado para lá neste turno depois de ser Invocado por Invocação-Normal/Baixado: você pode escavar os 3 cards do topo do seu Deck e, se isso acontecer, coloque-os no topo do Deck em qualquer ordem.
   ja: |-
     ①：このカードが召喚に成功した時に発動できる。自分のデッキの上からカードを３枚めくる。その中にモンスターがあった場合、その内の１体を除外する事でその同名モンスター１体をデッキ及びめくったカードの中から手札に加える事ができる。残りのカードはデッキに戻す。②：通常召喚したこのカードが墓地へ送られたターンのエンドフェイズに発動できる。自分のデッキの上からカードを３枚めくり、好きな順番でデッキの上に戻す。
-  ko:
+  ko: |-
+    ①: 이 카드가 일반 소환에 성공했을 때에 발동할 수 있다. 자신의 덱 위에서 카드를 3장 넘긴다. 그 중에 몬스터가 있었을 경우, 그 중의 1장을 제외하는 것으로 그와 같은 이름의 몬스터 1장을 덱 및 넘긴 카드 중에서 패에 넣을 수 있다. 남은 카드는 덱으로 되돌린다. ②: 통상 소환한 이 카드가 묘지로 보내진 턴의 엔드 페이즈에 발동할 수 있다. 자신의 덱 위에서 카드를 3장 넘기고, 좋아하는 순서대로 덱 위로 되돌린다.
   zh-TW:
   zh-CN: |-
     ①：这张卡召唤成功时可以发动。从自己卡组上面翻开3张卡。那之中有怪兽的场合，可以通过将那之中的1只除外来将1张其同名卡从卡组以及翻开的卡之中加入手牌。剩下的卡返回卡组。②：通常召唤的这张卡被送入墓地的回合的结束阶段可以发动。从自己卡组上面翻开3张卡，按照喜欢的顺序返回卡组上面。
@@ -72,6 +73,14 @@ sets:
     set_name: V Jump Spring 2022 subscription bonus
     rarities:
     - Ultra Rare
+  ko:
+  - set_number: 23PP-KRB05
+    set_name: Premium Pack 2023 2nd Wave
+    rarities:
+    - Common
+    - Normal Parallel Rare
+    - Super Rare
+    - Secret Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
