--- a/data/cards/77672444.yaml
+++ b/data/cards/77672444.yaml
@@ -9,8 +9,8 @@ name:
   pt: Frenesi do Motor
   ja: モーターバイオレンス
   ja_romaji: Mōtā Baiorensu
-  ko:
-  ko_rr:
+  ko: 모터바이올런스
+  ko_rr: Moteobaiolleonseu
   zh-TW:
   zh-CN: 暴力发动机
 text:
@@ -28,7 +28,8 @@ text:
     Se este card for Invocado por Invocação-Normal ou Especial, ou se um ou mais outros monstros Máquina forem Invocados por Invocação-Normal ou Especial no seu campo: você pode ativar este efeito; até o final do turno do seu oponente, esse(s) monstro(s) Invocado(s) por Invocação-Normal ou Especial ganha(m) ATK igual à metade da(s) sua(s) DEF original(is) e, além disso, sua(s) posição(ões) de batalha não pode(m) ser mudada(s). Se este card Invocado por Invocação-Tributo for enviado para o Cemitério: você pode Invocar por Invocação-Especial 2 "Ficha de Motor" (Máquina/TERRA/Nível 1/ATK 200/DEF 200) em Posição de Ataque. Você só pode usar cada efeito de "Frenesi do Motor" uma vez por turno.
   ja: |-
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードが召喚・特殊召喚に成功した場合、または自分フィールドにこのカード以外の機械族モンスターが召喚・特殊召喚された場合に発動できる。その召喚・特殊召喚されたモンスターは相手ターン終了時まで、攻撃力がその元々の守備力の半分アップし、表示形式を変更できない。②：アドバンス召喚したこのカードが墓地へ送られた場合に発動できる。自分フィールドに「モータートークン」（機械族・地・星１・攻／守２００）２体を攻撃表示で特殊召喚する。
-  ko:
+  ko: |-
+    이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 일반 소환 / 특수 소환에 성공했을 경우, 또는 자신 필드에 이 카드 이외의 기계족 몬스터가 일반 소환 / 특수 소환되었을 경우에 발동할 수 있다. 그 일반 소환 / 특수 소환된 몬스터는 상대 턴 종료시까지, 공격력을 그 원래 수비력의 절반 올리고, 표시 형식을 변경할 수 없다. ②: 어드밴스 소환한 이 카드가 묘지로 보내졌을 경우에 발동할 수 있다. 자신 필드에 "모터 토큰"(기계족 / 땅 / 레벨 1 / 공 200 / 수 200) 2장을 공격 표시로 특수 소환한다.
   zh-TW:
   zh-CN: |-
     这个卡名的①②效果1回合各能使用1次。①：这张卡召唤或特殊召唤成功的场合，或者自己场上的这张卡以外的机械族怪兽被召唤或特殊召唤的场合可以发动。那些被召唤或特殊召唤的怪兽直到对手回合结束时，攻击力上升其原守备力的一半数值且不能变更表示形式。②：高等召唤的这张卡被送入墓地的场合可以发动。将2只「モータートークン／发动机衍生物」（机械族·地·1星·攻/守200）以攻击表示特殊召唤到自己的场上。
@@ -72,6 +73,14 @@ sets:
     set_name: V Jump Spring 2022 subscription bonus
     rarities:
     - Ultra Rare
+  ko:
+  - set_number: 23PP-KRB04
+    set_name: Premium Pack 2023 2nd Wave
+    rarities:
+    - Common
+    - Normal Parallel Rare
+    - Super Rare
+    - Secret Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
