--- a/data/cards/78077209.yaml
+++ b/data/cards/78077209.yaml
@@ -9,8 +9,8 @@ name:
   pt:
   ja: <ruby>魔<rt>ま</rt></ruby><ruby>竜<rt>りゅう</rt></ruby><ruby>将<rt>しょう</rt></ruby>ディアボリカ
   ja_romaji: Maryūshō Diaborika
-  ko:
-  ko_rr:
+  ko: 마룡장 디아볼리카
+  ko_rr: Maryongjang Diabollika
   zh-TW:
   zh-CN: 魔龙将 迪亚波利卡
 text:
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     このカード名の①②の効果は１ターンに１度、いずれか１つしか使用できない。①：このカードが手札・墓地に存在し、「魔竜将ディアボリカ」以外の悪魔族モンスターが効果で自分の墓地へ送られた場合に発動できる。このカードを特殊召喚する。この効果で特殊召喚したこのカードは、フィールドから離れた場合に除外される。②：このカードが効果で墓地へ送られた場合、「魔竜将ディアボリカ」以外の自分の墓地の悪魔族モンスター１体を対象として発動できる。そのモンスターを手札に加える。
-  ko:
+  ko: |-
+    이 카드명의 ①②의 효과는 1턴에 1번, 어느 쪽이든 1개밖에 사용할 수 없다. ①: 이 카드가 패 / 묘지에 존재하고, "마룡장 디아볼리카" 이외의 악마족 몬스터가 효과로 자신 묘지로 보내졌을 경우에 발동할 수 있다. 이 카드를 특수 소환한다. 이 효과로 특수 소환한 이 카드는, 필드에서 벗어났을 경우에 제외된다. ②: 이 카드가 효과로 묘지로 보내졌을 경우, "마룡장 디아볼리카" 이외의 자신 묘지의 악마족 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 패에 넣는다.
   zh-TW:
   zh-CN: |-
     这个卡名的①②的效果1回合只能有1次使用其中任意1个。
