--- a/data/cards/78642798.yaml
+++ b/data/cards/78642798.yaml
@@ -9,8 +9,8 @@ name:
   pt: Ídolo dos Olhos Dourados
   ja: <ruby>黄<rt>おう</rt></ruby><ruby>金<rt>ごん</rt></ruby>の<ruby>邪<rt>じゃ</rt></ruby><ruby>教<rt>きょう</rt></ruby><ruby>神<rt>しん</rt></ruby>
   ja_romaji: Ōgon no Jakyōshin
-  ko:
-  ko_rr:
+  ko: 황금의 사교신
+  ko_rr: Hwanggeum-ui Sagyosin
   zh-TW:
   zh-CN: 黄金邪教神
 text:
@@ -28,7 +28,8 @@ text:
     Uma vez por turno (Efeito Rápido): você pode ativar este efeito; olhe a mão do seu oponente e, além disso, o nome deste card se torna "Ídolo dos Mil Olhos" até a Fase Final. Se este card for banido ou enviado para o Cemitério devido a um efeito de card: você pode escolher 1 Monstro de Efeito que seu oponente controla; equipe esse Monstro de Efeito a 1 monstro "Restrição do" ou "Renunciado" que você controla que não possa ser Invocado por Invocação-Normal. Enquanto estiver equipado por este efeito, esse monstro ganha ATK igual ao ATK do monstro equipado. Você só pode usar este efeito de "Ídolo dos Olhos Dourados" uma vez por turno.
   ja: |-
     このカード名の②の効果は１ターンに１度しか使用できない。①：自分・相手ターンに１度、発動できる。相手の手札を全て確認する。このカードのカード名はエンドフェイズまで「千眼の邪教神」として扱う。②：このカードが除外された場合、または効果で墓地へ送られた場合、相手フィールドの効果モンスター１体を対象として発動できる。その効果モンスターを自分フィールドの通常召喚できない「サクリファイス」モンスター１体に装備する。この効果でモンスターを装備している限り、その攻撃力分、装備モンスターの攻撃力はアップする。
-  ko:
+  ko: |-
+    이 카드명의 ②의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 자신 / 상대 턴에 1번, 발동할 수 있다. 상대의 패를 전부 확인한다. 이 카드의 카드명은 엔드 페이즈까지 "천개의 눈을 가진 사교신"으로 취급한다. ②: 이 카드가 제외되었을 경우, 또는 효과로 묘지로 보내졌을 경우, 상대 필드의 효과 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 효과 몬스터를 자신 필드의 통상 소환할 수 없는 "새크리파이스" 몬스터 1장에 장착한다. 이 효과로 몬스터를 장착하고 있는 한, 그 공격력만큼, 장착 몬스터의 공격력을 올린다.
   zh-TW:
   zh-CN: |-
     这个卡名的②的效果1回合只能使用1次。
