--- a/data/cards/85758066.yaml
+++ b/data/cards/85758066.yaml
@@ -9,8 +9,8 @@ name:
   pt:
   ja: <ruby>機<rt>き</rt></ruby><ruby>械<rt>かい</rt></ruby>じかけのマジックミラー
   ja_romaji: Kikaijikake no Majikku Mirā
-  ko:
-  ko_rr:
+  ko: 기계장치의 매직미러
+  ko_rr: Gigyejangchi-ui Maejikmireo
   zh-TW:
   zh-CN: 机械装置的魔法镜
 text:
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     ①：相手モンスターの攻撃宣言時に、相手の墓地の魔法カード１枚を対象として発動できる。そのカードを自分フィールドにセットする。②：墓地のこのカードを除外し、手札及び自分フィールドにセットされたカードの中から、「死者蘇生」１枚を墓地へ送って発動できる。自分の墓地から「オベリスクの巨神兵」１体を選んで守備表示で特殊召喚する。この効果を相手ターンに発動した場合、このターンこの効果で特殊召喚したモンスターが自分フィールドに存在する限り、攻撃可能な相手モンスターはそのモンスターを攻撃しなければならない。
-  ko:
+  ko: |-
+    ①: 상대 몬스터의 공격 선언시에, 상대 묘지의 마법 카드 1장을 대상으로 하고 발동할 수 있다. 그 카드를 자신 필드에 세트한다. ②: 묘지의 이 카드를 제외하고, 패 및 자신 필드에 세트된 카드 중에서, "죽은 자의 소생" 1장을 묘지로 보내고 발동할 수 있다. 자신 묘지에서 "오벨리스크의 거신병" 1장을 고르고 수비 표시로 특수 소환한다. 이 효과를 상대 턴에 발동했을 경우, 이 턴에 이 효과로 특수 소환한 몬스터가 자신 필드에 존재하는 한, 공격 가능한 상대 몬스터는 그 몬스터를 공격해야 한다.
   zh-TW:
   zh-CN: |-
     ①：对手怪兽的攻击宣言时，可以以对手墓地的1张魔法卡为对象发动。将那张卡盖放到自己的场上。②：可以将墓地的这张卡除外，从手牌以及自己场上盖放的卡之中将1张「死者蘇生／死者苏生」送入墓地发动。从自己的墓地选1只「オベリスクの巨神兵／奥贝利斯克之巨神兵」以守备表示特殊召唤。在对手的回合发动这个效果的场合，这个回合只要用这个效果特殊召唤的怪兽在自己的场上存在，可以攻击的对手怪兽就必须攻击那只怪兽。
