--- a/data/cards/85888377.yaml
+++ b/data/cards/85888377.yaml
@@ -9,8 +9,8 @@ name:
   pt: Apophis, a Divindade do Pântano
   ja: <ruby>澱<rt>でん</rt></ruby><ruby>神<rt>しん</rt></ruby>アポピス
   ja_romaji: Denshin Apopisu
-  ko:
-  ko_rr:
+  ko: 전신 아포피스
+  ko_rr: Jeonsin Apopiseu
   zh-TW:
   zh-CN: 淀神 阿波斐斯
 text:
@@ -28,7 +28,8 @@ text:
     Durante a Fase Principal: Invoque este card por Invocação-Especial como um Monstro Normal (Réptil/TERRA/Nível 6/ATK 2000/DEF 2200) (este card ainda é considerado uma Armadilha) e, depois, você pode negar os efeitos dos cards com a face para cima que seu oponente controla, até o número de outras Armadilhas Contínuas que você controla, até o final deste turno.
   ja: |-
     ①：自分・相手のメインフェイズに発動できる。このカードは発動後、通常モンスター（爬虫類族・地・星６・攻２０００／守２２００）となり、モンスターゾーンに特殊召喚する。このカードは罠カードとしても扱う。自分フィールドに他の永続罠カードが存在する場合、さらにその数まで相手フィールドの表側表示のカードを選んでその効果をターン終了時まで無効にできる。
-  ko:
+  ko: |-
+    ①: 자신 / 상대의 메인 페이즈에 발동할 수 있다. 이 카드는 발동 후, 일반 몬스터(파충류족 / 땅 / 레벨 6 / 공 2000 / 수 2200)가 되어, 몬스터 존에 특수 소환한다. 이 카드는 함정 카드로도 취급한다. 자신 필드에 다른 지속 함정 카드가 존재할 경우, 추가로 그 수까지 상대 필드의 앞면 표시의 카드를 고르고 그 효과를 턴 종료시까지 무효로 할 수 있다.
   zh-TW:
   zh-CN: |-
     ①：自己或对手的主要阶段可以发动。这张卡发动后，变为通常怪兽（爬虫类族·地·6星·攻2000/守2200）特殊召唤到怪兽区。这张卡也当作陷阱卡使用。自己场上有其他的永续陷阱卡存在的场合，可以再选最多为那个数量的对手场上的表侧表示的卡使其效果直到回合结束时无效。
