--- a/data/cards/91262474.yaml
+++ b/data/cards/91262474.yaml
@@ -9,8 +9,8 @@ name:
   pt:
   ja: スターダスト・ヴルム
   ja_romaji: Sutādasuto Vurumu
-  ko:
-  ko_rr:
+  ko: 스타더스트 브룸
+  ko_rr: Seutadeoseuteu Beurum
   zh-TW:
   zh-CN: 星尘亚龙
 text:
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードが手札・墓地に存在し、自分フィールドにレベル８以上のドラゴン族Ｓモンスターが存在する場合に発動できる。このカードを特殊召喚する。この効果で特殊召喚したこのカードは、フィールドから離れた場合に除外される。②：このカードをリリースして発動できる。自分の手札・墓地から「スターダスト・ヴルム」以外のドラゴン族・光属性・レベル１モンスターを２体まで選んで特殊召喚する。この効果で特殊召喚したモンスターは効果を発動できない。
-  ko:
+  ko: |-
+    이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 패 / 묘지에 존재하고, 자신 필드에 레벨 8 이상의 드래곤족 싱크로 몬스터가 존재할 경우에 발동할 수 있다. 이 카드를 특수 소환한다. 이 효과로 특수 소환한 이 카드는, 필드에서 벗어났을 경우에 제외된다. ②: 이 카드를 릴리스하고 발동할 수 있다. 자신의 패 / 묘지에서 "스타더스트 브룸" 이외의 드래곤족 / 빛 속성 / 레벨 1 몬스터를 2장까지 고르고 특수 소환한다. 이 효과로 특수 소환한 몬스터는 효과를 발동할 수 없다.
   zh-TW:
   zh-CN: |-
     这个卡名的①②效果1回合各能使用1次。①：这张卡在手牌或墓地存在，自己场上有等级8以上的龙族同调怪兽存在的场合可以发动。将这张卡特殊召唤。用这个效果特殊召唤的这张卡从场上离开的场合除外。②：可以将这张卡解放发动。从自己的手牌或墓地选最多2只「スターダスト・ヴル厶／星尘亚龙」以外的龙族·光属性·等级1怪兽特殊召唤。用这个效果特殊召唤的怪兽不能发动效果。
@@ -44,6 +45,14 @@ sets:
     set_name: The Valuable Book EX 2 promotional cards
     rarities:
     - Ultra Rare
+  ko:
+  - set_number: 23PP-KRB03
+    set_name: Premium Pack 2023 2nd Wave
+    rarities:
+    - Common
+    - Normal Parallel Rare
+    - Super Rare
+    - Secret Rare
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
