--- a/data/cards/91479482.yaml
+++ b/data/cards/91479482.yaml
@@ -9,8 +9,8 @@ name:
   pt:
   ja: <ruby>紅<rt>ぐ</rt></ruby><ruby>恋<rt>れん</rt></ruby>の<ruby>麗<rt>れい</rt></ruby><ruby>傑<rt>けつ</rt></ruby>－ブラダマンテ
   ja_romaji: Guren no Reiketsu - Buradamante
-  ko:
-  ko_rr:
+  ko: 홍연의 여걸－브라다만테
+  ko_rr: Hong-yeon-ui Yeogeol - Beuradamante
   zh-TW:
   zh-CN: 红恋之丽杰-布拉达曼特
 text:
@@ -24,7 +24,8 @@ text:
   pt:
   ja: |-
     このカード名はルール上「焔聖騎士」カードとしても扱う。このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードを手札から捨て、自分フィールドの戦士族モンスター１体を対象として発動できる。そのモンスターが装備可能な装備魔法カード１枚をデッキから選び、そのモンスターに装備する。②：装備カードを装備していないこのカードが相手モンスターとの戦闘で破壊され墓地へ送られた時に発動できる。このカードを特殊召喚し、その相手フィールドのモンスターを装備カード扱いとしてこのカードに装備する。
-  ko:
+  ko: |-
+    이 카드명은 룰상 "불꽃성기사" 카드로도 취급한다. 이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 이 카드를 패에서 버리고, 자신 필드의 전사족 몬스터 1장을 대상으로 하여 발동할 수 있다. 그 몬스터가 장착 가능한 장착 마법 카드 1장을 덱에서 골라, 그 몬스터에 장착한다. ②: 장착 카드를 장착하고 있지 않은 이 카드가 상대 몬스터와의 전투로 파괴되어 묘지로 보내졌을 때에 발동할 수 있다. 이 카드를 특수 소환하고, 그 상대 필드의 몬스터를 장착 카드로 취급하여 이 카드에 장착한다.
   zh-TW:
   zh-CN: |-
     这个卡名规则上也当作「焔聖騎士／焰圣骑士」卡使用。这个卡名的①②效果1回合各能使用1次。①：可以将这张卡从手牌舍弃，以自己场上的1只战士族怪兽为对象发动。从卡组选1张可以装备那只怪兽的装备魔法卡，装备给那只怪兽。②：没装备有装备卡的这张卡被与对手怪兽所作的战斗破坏并送入墓地时可以发动。将这张卡特殊召唤，将那只对手场上的怪兽当作装备卡使用装备给这张卡。
