--- a/data/cards/96239878.yaml
+++ b/data/cards/96239878.yaml
@@ -9,7 +9,7 @@ name:
   pt: Força da União
   ja: <ruby>束<rt>たば</rt></ruby>ねられし<ruby>力<rt>ちから</rt></ruby>
   ja_romaji: Tabanerareshi Chikara
-  ko:
+  ko: 결속된 힘
   ko_rr:
   zh-TW:
   zh-CN: 集结之力
@@ -28,7 +28,8 @@ text:
     Se você Invocar por Invocação-Ritual ou Fusão usando "Dragão Branco de Olhos Azuis" ou "Mago Negro": você pode escolher 1 card que seu oponente controla ou no Cemitério dele; bana-o. Você pode enviar este card com a face para cima do campo para o Cemitério e, depois, escolha 1 Monstro Normal de Nível 7 ou mais no seu Cemitério; adicione-o à sua mão ou embaralhe-o no Deck. Você só pode usar cada efeito de "Força da União" uma vez por turno.
   ja: |-
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：自分が「青眼の白龍」または「ブラック・マジシャン」を使用した儀式・融合召喚に成功した場合、相手のフィールド・墓地のカード１枚を対象として発動できる。そのカードを除外する。②：魔法＆罠ゾーンの表側表示のこのカードを墓地へ送り、自分の墓地のレベル７以上の通常モンスター１体を対象として発動できる。そのモンスターを手札に加えるかデッキに戻す。
-  ko:
+  ko: |-
+    이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 자신이 "푸른 눈의 백룡" 또는 "블랙 매지션"을 사용한 의식 / 융합 소환에 성공했을 경우, 상대의 필드 / 묘지의 카드 1장을 대상으로 하고 발동할 수 있다. 그 카드를 제외한다. ②: 마법 & 함정 존의 앞면 표시의 이 카드를 묘지로 보내고, 자신 묘지의 레벨 7 이상의 일반 몬스터 1장을 대상으로 하여 발동할 수 있다. 그 몬스터를 패에 넣거나 덱으로 되돌린다.
   zh-TW:
   zh-CN: |-
     此卡名的①②效果1回合仅可各使用1次。①：自己使用了"青眼白龙"或"黑魔导"的仪式・融合召唤成功的情况下，以对手场上・墓地的1张卡为对象可以发动。将该卡除外。②：将魔法与陷阱区域的表侧表示的此卡送至墓地，以自己墓地1只等级7以上的通常怪兽为对象可以发动。将该怪兽加入手牌或放回牌组。
