--- a/data/cards/98462037.yaml
+++ b/data/cards/98462037.yaml
@@ -9,8 +9,8 @@ name:
   pt:
   ja: <ruby>閃<rt>せん</rt></ruby><ruby>刀<rt>とう</rt></ruby><ruby>姫<rt>き</rt></ruby>－アザレア
   ja_romaji: Sentōki - Azarea
-  ko:
-  ko_rr:
+  ko: 섬도희－아자레아
+  ko_rr: Seomdohui - Ajarea
   zh-TW:
   zh-CN: 闪刀姬-阿塞莉娅
 text:
@@ -25,7 +25,9 @@ text:
   ja: |-
     光・闇属性モンスター２体
     このカードはリンク召喚でしか特殊召喚できず、自分は「閃刀姫－アザレア」を１ターンに１度しか特殊召喚できない。①：このカードが特殊召喚に成功した場合、フィールドのカード１枚を対象として発動できる。そのカードを破壊する。その後、自分の墓地の魔法カードが３枚以下の場合、このカードを墓地へ送る。②：１ターンに１度、このカードが相手モンスターと戦闘を行うダメージステップ開始時、自分の墓地から魔法カード１枚を除外して発動できる。その相手モンスターを破壊する。
-  ko:
+  ko: |-
+    빛 / 어둠 속성 몬스터 2장
+    이 카드는 링크 소환으로밖에 특수 소환할 수 없으며, 자신은 "섬도희－아자레아"를 1턴에 1번밖에 특수 소환할 수 없다. ①: 이 카드가 특수 소환에 성공했을 경우, 필드의 카드 1장을 대상으로 하고 발동할 수 있다. 그 카드를 파괴한다. 그 후, 자신 묘지의 마법 카드가 3장 이하일 경우, 이 카드를 묘지로 보낸다. ②: 1턴에 1번, 이 카드가 상대 몬스터와 전투를 실행하는 데미지 스텝 개시시, 자신 묘지에서 마법 카드 1장을 제외하고 발동할 수 있다. 그 상대 몬스터를 파괴한다.
   zh-TW:
   zh-CN: |-
     光或暗属性怪兽2只
