--- a/data/cards/yugipedia928724.yaml
+++ b/data/cards/yugipedia928724.yaml
@@ -8,7 +8,7 @@ name:
   it:
   pt:
   ja: <ruby>暗<rt>あん</rt></ruby><ruby>黒<rt>こく</rt></ruby><ruby>界<rt>かい</rt></ruby>の<ruby>混<rt>こん</rt></ruby><ruby>沌<rt>とん</rt></ruby><ruby>王<rt>おう</rt></ruby> カラレス
-  ja_romaji: Ankokukai no Konton Ō Kararesu
+  ja_romaji: Ankokukai no Konton'ō Kararesu
   ko:
   ko_rr:
   zh-TW:
