--- a/data/cards/11868825.yaml
+++ b/data/cards/11868825.yaml
@@ -17,8 +17,10 @@ text:
   en: |-
     Increase your Life Points by 600 points.
   de: |-
+    (Diese Karte wird immer als „Goblin“-Karte behandelt.)
     Erhöhe deine Life Points um 600 Punkte.
   es: |-
+    (Esta carta se trata siempre como una carta "Goblin").
     Aumenta tus Life Points en 600 puntos.
   fr: |-
     Augmente vos Life Points de 600 points.
