--- a/data/cards/40320754.yaml
+++ b/data/cards/40320754.yaml
@@ -17,13 +17,15 @@ text:
   en: |-
     If this card is destroyed by battle and sent to the Graveyard: Target 1 Plant-Type monster in your Graveyard, except "Lord Poison"; Special Summon that target.
   de: |-
-    Wenn diese Karte als Ergebnis eines Kampfes zerstört und auf den Friedhof gelegt wird, wird 1 Monster vom Typ Pflanze außer "Herrscher des Gifts" in deinem Friedhof als Spezialbeschwörung auf deine Spielfeldseite beschworen.
+    (Diese Karte wird nicht als „Gift“-Karte behandelt.)
+    Falls diese Karte durch Kampf zerstört und auf den Friedhof gelegt wird: Wähle 1 Monster vom Typ Pflanze in deinem Friedhof, außer „Herrscher des Gifts“; beschwöre das gewählte Ziel als Spezialbeschwörung.
   es: |-
     Si esta carta es destruida en batalla y mandada al Cementerio: selecciona 1 monstruo de Tipo Planta en tu Cementerio, excepto "Lord Veneno"; Invoca ese objetivo de Modo Especial.
   fr: |-
     Si cette carte est détruite au combat et envoyée au Cimetière : ciblez 1 monstre de Type Plante ("Seigneur Poison" exclu) dans votre Cimetière ; Invoquez Spécialement la cible.
   it: |-
-    Quando questa carta viene distrutta in battaglia e mandata al Cimitero: scegli come bersaglio 1 mostro di Tipo Pianta nel tuo Cimitero, eccetto "Signore del Veleno"; Evoca Specialmente quel bersaglio.
+    (Questa carta non viene considerata come una carta "Veleno".)
+    Se questa carta viene distrutta in battaglia e mandata al Cimitero: scegli come bersaglio 1 mostro di Tipo Pianta nel tuo Cimitero, eccetto "Signore del Veleno"; Evoca Specialmente quel bersaglio.
   pt: |-
     Se este card for destruído em batalha e enviado para o Cemitério: escolha 1 monstro do Tipo Planta no seu Cemitério, exceto "Lorde Veneno"; Invoque o alvo por Invocação-Especial.
   ja: |-
