--- a/data/rush/yugipedia936321.yaml
+++ b/data/rush/yugipedia936321.yaml
@@ -65,5 +65,6 @@ sets:
   - set_number: RD/TB01-JP002
     set_name: 'Triple Build Pack: Godbreath Wing'
     rarities:
+    - Super Rare
     - Over Rush Rare
 yugipedia_page_id: 936321
