--- a/data/rush/yugipedia936324.yaml
+++ b/data/rush/yugipedia936324.yaml
@@ -66,5 +66,6 @@ sets:
   - set_number: RD/TB01-JP001
     set_name: 'Triple Build Pack: Godbreath Wing'
     rarities:
+    - Super Rare
     - Over Rush Rare
 yugipedia_page_id: 936324
