--- a/data/rush/yugipedia936568.yaml
+++ b/data/rush/yugipedia936568.yaml
@@ -52,5 +52,6 @@ sets:
   - set_number: RD/TB01-JP040
     set_name: 'Triple Build Pack: Godbreath Wing'
     rarities:
+    - Super Rare
     - Over Rush Rare
 yugipedia_page_id: 936568
