--- a/data/rush/yugipedia937016.yaml
+++ b/data/rush/yugipedia937016.yaml
@@ -64,5 +64,6 @@ sets:
   - set_number: RD/TB01-JP018
     set_name: 'Triple Build Pack: Godbreath Wing'
     rarities:
+    - Super Rare
     - Over Rush Rare
 yugipedia_page_id: 937016
