--- a/rush.yaml
+++ b/rush.yaml
@@ -100368,6 +100368,7 @@ sets:
   - set_number: RD/TB01-JP002
     set_name: 'Triple Build Pack: Godbreath Wing'
     rarities:
+    - Super Rare
     - Over Rush Rare
 yugipedia_page_id: 936321
 ---
@@ -100439,6 +100440,7 @@ sets:
   - set_number: RD/TB01-JP001
     set_name: 'Triple Build Pack: Godbreath Wing'
     rarities:
+    - Super Rare
     - Over Rush Rare
 yugipedia_page_id: 936324
 ---
@@ -100510,6 +100512,7 @@ sets:
   - set_number: RD/TB01-JP003
     set_name: 'Triple Build Pack: Godbreath Wing'
     rarities:
+    - Super Rare
     - Over Rush Rare
 yugipedia_page_id: 936327
 ---
@@ -100567,6 +100570,7 @@ sets:
   - set_number: RD/TB01-JP040
     set_name: 'Triple Build Pack: Godbreath Wing'
     rarities:
+    - Super Rare
     - Over Rush Rare
 yugipedia_page_id: 936568
 ---
@@ -100636,6 +100640,7 @@ sets:
   - set_number: RD/TB01-JP038
     set_name: 'Triple Build Pack: Godbreath Wing'
     rarities:
+    - Super Rare
     - Over Rush Rare
 yugipedia_page_id: 936570
 ---
@@ -101039,6 +101044,7 @@ sets:
   - set_number: RD/TB01-JP018
     set_name: 'Triple Build Pack: Godbreath Wing'
     rarities:
+    - Super Rare
     - Over Rush Rare
 yugipedia_page_id: 937016
 ---
@@ -101368,3 +101374,56 @@ sets:
     rarities:
     - Ultra Rare
 yugipedia_page_id: 937289
+---
+konami_id:
+name:
+  en: Triangle Ecstasy Spark
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    You have "Harpie Ladies" face-up on your field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Up to 3 face-up WIND Attribute monsters on your field gain 600 ATK until the end of this turn. This turn, your opponent cannot activate Trap Cards.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Spell
+property: Normal
+series:
+- Harpie
+images:
+- index: 1
+  image: TriangleEcstasySpark-RDTB01-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/TB01-JP013
+    set_name: 'Triple Build Pack: Godbreath Wing'
+    rarities:
+    - Common
+yugipedia_page_id: 938545
