--- a/data/cards/15388353.yaml
+++ b/data/cards/15388353.yaml
@@ -1,7 +1,7 @@
 konami_id: 18745
 password: 15388353
 name:
-  en: Nouvelles Auberge "À Table"
+  en: Nouvelles Restaurant "At Table"
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 新式魔餐旅店『上桌』
 text:
   en: |-
-    When this card is activated: You can add 1 "Recipe" card from your Deck or GY to your hand. Once per turn: You can place 1 Ritual Monster from your hand on the bottom of the Deck; draw 1 card. Once per turn, during your End Phase: You can target 2 cards in your GY, including a "Recipe" card; place them on the bottom of the Deck in any order, then draw 1 card. You can only activate 1 "Nouvelles Auberge "À Table"" per turn.
+    When this card is activated: You can add 1 "Recipe" card from your Deck or GY to your hand. Once per turn: You can place 1 Ritual Monster from your hand on the bottom of the Deck; draw 1 card. Once per turn, during your End Phase: You can target 2 cards in your GY, including a "Recipe" card; place them on the bottom of the Deck in any order, then draw 1 card. You can only activate 1 "Nouvelles Restaurant "At Table"" per turn.
   de:
   es:
   fr:
@@ -33,7 +33,7 @@ series:
 - Nouvelles
 images:
 - index: 1
-  image: NouvellesAubergeÀTable-DBWS-JP-SR.png
+  image: NouvellesRestaurantAtTable-DBWS-JP-SR.png
 sets:
   ja:
   - set_number: DBWS-JP035
