--- a/data/cards/27345070.yaml
+++ b/data/cards/27345070.yaml
@@ -1,7 +1,7 @@
 konami_id: 18736
 password: 27345070
 name:
-  en: Vanquish Soul Continue
+  en: Vanquish Soul - Continue?
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    Pay 500 LP, then target 1 "Vanquish Soul" monster in your GY; either add it to your hand or Special Summon it in Defense Position. You can only activate 1 "Vanquish Soul Continue" per turn.
+    Pay 500 LP, then target 1 "Vanquish Soul" monster in your GY; either add it to your hand or Special Summon it in Defense Position. You can only activate 1 "Vanquish Soul - Continue?" per turn.
   de:
   es:
   fr:
