--- a/data/cards/28168628.yaml
+++ b/data/cards/28168628.yaml
@@ -1,7 +1,7 @@
 konami_id: 18733
 password: 28168628
 name:
-  en: Rock of Vanquisher
+  en: Rock of the Vanquisher
   de:
   es:
   fr:
@@ -19,7 +19,7 @@ text:
     Cannot be used as Link Material. While you control a "Vanquish Soul" monster, your opponent's monsters can only target your monster with the highest ATK for attacks (their choice, if tied). During the Main Phase (Quick Effect): You can activate 1 of these effects;
     ● Special Summon 1 "Vanquish Soul" monster from your hand.
     ● Add 1 "Vanquish Soul" monster from your GY to your hand.
-    You can only use this effect of "Rock of Vanquisher" once per turn.
+    You can only use this effect of "Rock of the Vanquisher" once per turn.
   de:
   es:
   fr:
@@ -42,7 +42,7 @@ atk: 0
 materials: 1 "Vanquish Soul" monster
 images:
 - index: 1
-  image: RockofVanquisher-DBWS-JP-C.png
+  image: RockoftheVanquisher-DBWS-JP-C.png
 sets:
   ja:
   - set_number: DBWS-JP022
