--- a/data/cards/29280200.yaml
+++ b/data/cards/29280200.yaml
@@ -1,7 +1,7 @@
 konami_id: 18730
 password: 29280200
 name:
-  en: Vanquish Soul Dr. Madlove
+  en: Vanquish Soul Dr. Mad Love
   de:
   es:
   fr:
@@ -18,7 +18,7 @@ text:
     If this card is Normal or Special Summoned: You can add 1 "Vanquish Soul" Spell/Trap from your Deck to your hand. (Quick Effect): You can reveal 1 monster in your hand of each of the following Attributes, then activate the appropriate effect;
     ● DARK: 1 face-up monster your opponent controls loses 500 ATK/DEF.
     ● DARK and EARTH: Return the 1 monster on the field with the lowest DEF to the hand (your choice, if tied).
-    You can only use each effect of "Vanquish Soul Dr. Madlove" once per turn, and cannot activate them in the same Chain.
+    You can only use each effect of "Vanquish Soul Dr. Mad Love" once per turn, and cannot activate them in the same Chain.
   de:
   es:
   fr:
@@ -40,7 +40,7 @@ series:
 - Vanquish Soul
 images:
 - index: 1
-  image: VanquishSoulDrMadlove-DBWS-JP-SR.png
+  image: VanquishSoulDrMadLove-DBWS-JP-SR.png
 sets:
   ja:
   - set_number: DBWS-JP019
