--- a/data/cards/54562327.yaml
+++ b/data/cards/54562327.yaml
@@ -1,7 +1,7 @@
 konami_id: 18734
 password: 54562327
 name:
-  en: Stake Your Soul!
+  en: Stake your Soul!
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 赌上你的灵魂！
 text:
   en: |-
-    Reveal 1 monster in your hand; Special Summon 1 "Vanquish Soul" monster from your Deck with the same Attribute but a different name, but return it to the hand during the End Phase. You can only activate 1 "Stake Your Soul!" per turn.
+    Reveal 1 monster in your hand; Special Summon 1 "Vanquish Soul" monster from your Deck with the same Attribute but a different name, but return it to the hand during the End Phase. You can only activate 1 "Stake your Soul!" per turn.
   de:
   es:
   fr:
@@ -31,7 +31,7 @@ card_type: Spell
 property: Normal
 images:
 - index: 1
-  image: StakeYourSoul-DBWS-JP-SR.png
+  image: StakeyourSoul-DBWS-JP-SR.png
 sets:
   ja:
   - set_number: DBWS-JP023
