--- a/data/cards/66401502.yaml
+++ b/data/cards/66401502.yaml
@@ -1,7 +1,7 @@
 konami_id: 18728
 password: 66401502
 name:
-  en: Vanquish Soul Panthera
+  en: Vanquish Soul Pantera
   de:
   es:
   fr:
@@ -18,7 +18,7 @@ text:
     If you control no monsters in your Main Monster Zone: You can Special Summon this card from your hand. (Quick Effect): You can reveal 1 monster in your hand of each of the following Attributes, then activate the appropriate effect;
     ● EARTH: This card cannot be destroyed by battle this turn.
     ● EARTH and FIRE: Destroy all Spells and Traps in this card's column.
-    You can only use each effect of "Vanquish Soul Panthera" once per turn, and cannot activate them in the same Chain.
+    You can only use each effect of "Vanquish Soul Pantera" once per turn, and cannot activate them in the same Chain.
   de:
   es:
   fr:
@@ -40,7 +40,7 @@ series:
 - Vanquish Soul
 images:
 - index: 1
-  image: VanquishSoulPanthera-DBWS-JP-C.png
+  image: VanquishSoulPantera-DBWS-JP-C.png
 sets:
   ja:
   - set_number: DBWS-JP017
