--- a/data/cards/80738884.yaml
+++ b/data/cards/80738884.yaml
@@ -1,7 +1,7 @@
 konami_id: 18738
 password: 80738884
 name:
-  en: Vanquish Soul Calamity Kaiser
+  en: Vanquish Soul Calamity Caesar
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 征服之魂 龙帝之枪
 text:
   en: |-
-    When your opponent activates a Spell/Trap Card, or monster effect, that targets a card(s) you control while you control a "Vanquish Soul" monster: Negate the activation, and if you do, destroy that card, then you can inflict damage to your opponent equal to the ATK of 1 "Vanquish Soul" monster you control. You can only activate 1 "Vanquish Soul Calamity Kaiser" per turn.
+    When your opponent activates a Spell/Trap Card, or monster effect, that targets a card(s) you control while you control a "Vanquish Soul" monster: Negate the activation, and if you do, destroy that card, then you can inflict damage to your opponent equal to the ATK of 1 "Vanquish Soul" monster you control. You can only activate 1 "Vanquish Soul Calamity Caesar" per turn.
   de:
   es:
   fr:
@@ -33,7 +33,7 @@ series:
 - Vanquish Soul
 images:
 - index: 1
-  image: VanquishSoulCalamityKaiser-DBWS-JP-C.png
+  image: VanquishSoulCalamityCaesar-DBWS-JP-C.png
 sets:
   ja:
   - set_number: DBWS-JP027
