--- a/data/cards/87778106.yaml
+++ b/data/cards/87778106.yaml
@@ -1,7 +1,7 @@
 konami_id: 18747
 password: 87778106
 name:
-  en: Recette de Poisson - Fish Recipe
+  en: Recette de Poisson (Fish Recipe)
   de:
   es:
   fr:
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     This card can be used to Ritual Summon any "Nouvelles" Ritual Monster. You must also Tribute monsters from your hand or field whose total Levels equal or exceed the Level of the Ritual Monster you Ritual Summon. Then, if you Ritual Summoned "Buerillabaisse de Nouvelles" with this effect, you can apply the following effect.
-    ● Add 1 "Recipe" Ritual Spell from your Deck or GY to your hand, except "Recette de Poisson - Fish Recipe".
+    ● Add 1 "Recipe" Ritual Spell from your Deck or GY to your hand, except "Recette de Poisson (Fish Recipe)".
   de:
   es:
   fr:
