--- a/data/cards/89016236.yaml
+++ b/data/cards/89016236.yaml
@@ -1,7 +1,7 @@
 konami_id: 18741
 password: 89016236
 name:
-  en: Poêlétis de Nouvelles
+  en: Poeltis de Nouvelles
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 新式魔餐 闷煎布提斯
 text:
   en: |-
-    You can Ritual Summon this card with any "Recipe" card. You can only use each of the following effects of "Poêlétis de Nouvelles" once per turn. If this card is Special Summoned: You can draw 1 card. When a card or effect is activated that targets a monster(s) on the field, or when a monster is targeted for an attack (Quick Effect): You can Tribute both 1 "Nouvelles" monster you control and 1 Attack Position monster on either field, and if you do, Special Summon 1 Level 4 or 5 "Nouvelles" Ritual Monster from your hand or Deck.
+    You can Ritual Summon this card with any "Recipe" card. You can only use each of the following effects of "Poeltis de Nouvelles" once per turn. If this card is Special Summoned: You can draw 1 card. When a card or effect is activated that targets a monster(s) on the field, or when a monster is targeted for an attack (Quick Effect): You can Tribute both 1 "Nouvelles" monster you control and 1 Attack Position monster on either field, and if you do, Special Summon 1 Level 4 or 5 "Nouvelles" Ritual Monster from your hand or Deck.
   de:
   es:
   fr:
@@ -37,7 +37,7 @@ series:
 - Nouvelles
 images:
 - index: 1
-  image: PoêlétisdeNouvelles-DBWS-JP-SR.png
+  image: PoeltisdeNouvelles-DBWS-JP-SR.png
 sets:
   ja:
   - set_number: DBWS-JP031
