--- a/data/cards/40551410.yaml
+++ b/data/cards/40551410.yaml
@@ -1,7 +1,7 @@
 konami_id: 18749
 password: 40551410
 name:
-  en: Recette de Personnel - Cook's Recipe
+  en: Recette de Personnel (Staff Recipe)
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: Recette de Personnel~膳食的食谱~
 text:
   en: |-
-    You can target 1 Ritual Monster you control; Special Summon 1 "Nouvelles Token" (Fiend/DARK/Level 1/50 ATK/50 DEF), and if you do, its Level becomes that monster's. You can send this face-up card from your Spell & Trap Zone to the GY; Ritual Summon 1 "Nouvelles" Ritual Monster from your hand, by Tributing monsters from your hand or field whose total Levels exactly equal the Level of the Ritual Monster you Ritual Summon. You can only use each effect of "Recette de Personnel - Cook's Recipe" once per turn.
+    You can target 1 Ritual Monster you control; Special Summon 1 "Nouvelles Token" (Fiend/DARK/Level 1/50 ATK/50 DEF), and if you do, its Level becomes that monster's. You can send this face-up card from your Spell & Trap Zone to the GY; Ritual Summon 1 "Nouvelles" Ritual Monster from your hand, by Tributing monsters from your hand or field whose total Levels exactly equal the Level of the Ritual Monster you Ritual Summon. You can only use each effect of "Recette de Personnel (Staff Recipe)" once per turn.
   de:
   es:
   fr:
@@ -33,7 +33,7 @@ series:
 - Recipe
 images:
 - index: 1
-  image: RecettedePersonnelCooksRecipe-DBWS-JP-C.png
+  image: RecettedePersonnelStaffRecipe-DBWS-JP-C.png
 sets:
   ja:
   - set_number: DBWS-JP039
