--- a/data/cards/41773061.yaml
+++ b/data/cards/41773061.yaml
@@ -1,7 +1,7 @@
 konami_id: 18746
 password: 41773061
 name:
-  en: Voici la Carte - Here is the Menu
+  en: Voici la Carte (Today's Menu)
   de:
   es:
   fr:
@@ -16,9 +16,9 @@ name:
 text:
   en: |-
     Reveal 2 "Nouvelles" monsters with different names from your Deck, your opponent chooses 1 of them for you to add to your hand, and you shuffle the other into your Deck, then you can add 1 of the following cards from your Deck or GY to your hand, based on the added monster's Type.
-    ● Beast-Warrior: "Recette de Poisson - Fish Recipe"
-    ● Warrior: "Recette de Viande - Meat Recipe"
-    You can only activate 1 "Voici la Carte - Here is the Menu" per turn.
+    ● Beast-Warrior: "Recette de Poisson (Fish Recipe)"
+    ● Warrior: "Recette de Viande (Meat Recipe)"
+    You can only activate 1 "Voici la Carte (Today's Menu)" per turn.
   de:
   es:
   fr:
@@ -38,7 +38,7 @@ card_type: Spell
 property: Normal
 images:
 - index: 1
-  image: VoicilaCarteHereistheMenu-DBWS-JP-SR.png
+  image: VoicilaCarteTodaysMenu-DBWS-JP-SR.png
 sets:
   ja:
   - set_number: DBWS-JP036
