--- a/data/rush/15781.yaml
+++ b/data/rush/15781.yaml
@@ -50,6 +50,10 @@ sets:
     set_name: Legend Awakening Pack
     rarities:
     - Rare
+  - set_number: RD/S23P-JP003
+    set_name: Tournament Battle June 2023 prize card
+    rarities:
+    - Ultra Parallel Rare
   ko:
   - set_number: RD/KP03-KR000
     set_name: 'Deck Mod Pack: Illusion Strike Mirage Impact!!'
